--- a/01 IoC 컨테이너/03 컴포넌트스캔.md
+++ b/01 IoC 컨테이너/03 컴포넌트스캔.md
@@ -1,3 +1,505 @@
+컴포넌트 스캔
+=======================   
+  
+이전에 `XML`과 `@Configuration`를 이용해서 빈을 생성하는 방법에 대해서 공부를 했다.   
+하지만, 만약 빈의 갯수가 수백, 수천개일 경우 이를 일일히 관리하기는 매우 어렵다.    
+       
+이를 해소해주기 위해, **스프링에서는 `@ComponentScan`이라는 기능을 제공한다.**         
+
+# 컴포넌트 스캔이란? 
+`@ComponentScan`은 **`@Component`어노테이션이 붙은 클래스를 찾아 자동으로 빈을 등록시켜준다.**     
+`@ComponentScan`은 해당 어노테이션이 붙은 클래스의 `클래스 패스`를 기준으로 동일/하위 패키지를 탐색한다.   
+
+## 
+
+
+
+한 가지 특이점으로는 `@ComponentScan`에 속성값에 필터 기능을 추가했다.       
+`excludeFilters`은 제외할 클래스를 지정하는데 사용하는 어노테이션 속성이다.     
+  
+참고로, 컴포넌트 스캔을 사용하면 `@Configuration` 이 붙은 설정 정보도 자동으로 등록된다.      
+`@Configuration` 이 컴포넌트 스캔의 대상이 된 이유도       
+`@Configuration`의 소스코드를 열어보면 `@Component` 어노테이션이 붙어있기 때문이다.    
+    
+그러면 이제 빈으로 등록할 클래스들에 `@Component`어노테이션을 붙이러 가보자     
+     
+**RateDiscountPolicy.class**
+```java
+package hello.core.discount;
+
+import hello.core.member.Grade;
+import hello.core.member.Member;
+import org.springframework.stereotype.Component;
+
+@Component
+public class RateDiscountPolicy implements DiscountPolicy{
+
+    private int discountPercent = 10;
+
+    @Override
+    public int discount(Member member, int price) {
+        if(member.getGrade() == Grade.VIP){
+            return price * discountPercent / 100;
+        }
+        return 0;
+    }
+}
+```
+
+**MemoryMemberRepository.class**
+```java
+package hello.core.member;
+
+import org.springframework.stereotype.Component;
+
+import java.util.HashMap;
+import java.util.Map;
+
+@Component
+public class MemoryMemberRepository implements MemberRepository {
+
+    private static Map<Long, Member> store = new HashMap<>();
+
+    @Override
+    public void save(Member member) {
+        store.put(member.getId(), member);
+    }
+
+    @Override
+    public Member findById(Long memberId) {
+        return store.get(memberId);
+    }
+
+}
+```
+
+**MemberServiceImpl.class**
+```java
+package hello.core.member;
+
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Component;
+
+@Component
+public class MemberServiceImpl implements MemberService {
+
+    private final MemberRepository memberRepository;
+
+    @Autowired
+    public MemberServiceImpl(MemberRepository memberRepository) {
+        this.memberRepository = memberRepository;
+    }
+
+    @Override
+    public void join(Member member) {
+        memberRepository.save(member);
+    }
+
+    @Override
+    public Member findMember(Long memberId) {
+        return memberRepository.findById(memberId);
+    }
+
+    // 테스트용 메서드
+    public MemberRepository getMemberRepository() {
+        return memberRepository;
+    }
+
+}
+```
+   
+**OrderServiceImpl.class**
+```java
+package hello.core.order;
+
+import hello.core.discount.DiscountPolicy;
+import hello.core.member.Member;
+import hello.core.member.MemberRepository;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Component;
+
+@Component
+public class OrderServiceImpl implements OrderService {
+
+    private final MemberRepository memberRepository;
+    private final DiscountPolicy discountPolicy;
+
+    @Autowired
+    public OrderServiceImpl(MemberRepository memberRepository, DiscountPolicy discountPolicy) {
+        this.memberRepository = memberRepository;
+        this.discountPolicy = discountPolicy;
+    }
+
+    @Override
+    public Order createOrder(Long memberId, String itemName, int itemPrice) {
+        Member member = memberRepository.findById(memberId);
+        int discountPrice = discountPolicy.discount(member, itemPrice);
+        return new Order(memberId, itemName, itemPrice, discountPrice);
+    }
+
+    // 테스트 용도
+    public MemberRepository getMemberRepository() {
+        return memberRepository;
+    }
+
+}
+```
+   
+___     
+   
+이제, 실제로 빈이 등록되었는지 그리고 알맞은 클래스타입을 반환하는지 테스트를해보자   
+    
+**src.test.hello.core.scan.AutoAppConfigTest.class**
+```java
+package hello.core.scan;
+
+import hello.core.AutoAppConfig;
+import hello.core.member.MemberService;
+import org.junit.jupiter.api.Test;
+import org.springframework.context.annotation.AnnotationConfigApplicationContext;
+
+import static org.assertj.core.api.Assertions.assertThat;
+
+public class AutoAppConfigTest {
+
+    @Test
+    void basicScan() {
+        // given
+        AnnotationConfigApplicationContext ac = new AnnotationConfigApplicationContext(AutoAppConfig.class);
+
+        // when
+        MemberService memberService = ac.getBean(MemberService.class);
+
+        // then
+        assertThat(memberService).isInstanceOf(MemberService.class);
+    }
+}
+```
+```java
+22:26:51.025 [main] DEBUG org.springframework.context.annotation.AnnotationConfigApplicationContext - Refreshing org.springframework.context.annotation.AnnotationConfigApplicationContext@18a70f16
+22:26:51.051 [main] DEBUG org.springframework.beans.factory.support.DefaultListableBeanFactory - Creating shared instance of singleton bean 'org.springframework.context.annotation.internalConfigurationAnnotationProcessor'
+22:26:51.201 [main] DEBUG org.springframework.context.annotation.ClassPathBeanDefinitionScanner - Identified candidate component class: file [/Users/ujae/IdeaProjects/inflearn/core/out/production/classes/hello/core/discount/RateDiscountPolicy.class]
+22:26:51.210 [main] DEBUG org.springframework.context.annotation.ClassPathBeanDefinitionScanner - Identified candidate component class: file [/Users/ujae/IdeaProjects/inflearn/core/out/production/classes/hello/core/member/MemberServiceImpl.class]
+22:26:51.212 [main] DEBUG org.springframework.context.annotation.ClassPathBeanDefinitionScanner - Identified candidate component class: file [/Users/ujae/IdeaProjects/inflearn/core/out/production/classes/hello/core/member/MemoryMemberRepository.class]
+22:26:51.214 [main] DEBUG org.springframework.context.annotation.ClassPathBeanDefinitionScanner - Identified candidate component class: file [/Users/ujae/IdeaProjects/inflearn/core/out/production/classes/hello/core/order/OrderServiceImpl.class]
+22:26:51.384 [main] DEBUG org.springframework.beans.factory.support.DefaultListableBeanFactory - Creating shared instance of singleton bean 'org.springframework.context.event.internalEventListenerProcessor'
+22:26:51.387 [main] DEBUG org.springframework.beans.factory.support.DefaultListableBeanFactory - Creating shared instance of singleton bean 'org.springframework.context.event.internalEventListenerFactory'
+22:26:51.388 [main] DEBUG org.springframework.beans.factory.support.DefaultListableBeanFactory - Creating shared instance of singleton bean 'org.springframework.context.annotation.internalAutowiredAnnotationProcessor'
+22:26:51.390 [main] DEBUG org.springframework.beans.factory.support.DefaultListableBeanFactory - Creating shared instance of singleton bean 'org.springframework.context.annotation.internalCommonAnnotationProcessor'
+22:26:51.408 [main] DEBUG org.springframework.beans.factory.support.DefaultListableBeanFactory - Creating shared instance of singleton bean 'autoAppConfig'
+22:26:51.416 [main] DEBUG org.springframework.beans.factory.support.DefaultListableBeanFactory - Creating shared instance of singleton bean 'rateDiscountPolicy'
+22:26:51.416 [main] DEBUG org.springframework.beans.factory.support.DefaultListableBeanFactory - Creating shared instance of singleton bean 'memberServiceImpl'
+22:26:51.449 [main] DEBUG org.springframework.beans.factory.support.DefaultListableBeanFactory - Creating shared instance of singleton bean 'memoryMemberRepository'
+22:26:51.451 [main] DEBUG org.springframework.beans.factory.support.DefaultListableBeanFactory - Autowiring by type from bean name 'memberServiceImpl' via constructor to bean named 'memoryMemberRepository'
+22:26:51.452 [main] DEBUG org.springframework.beans.factory.support.DefaultListableBeanFactory - Creating shared instance of singleton bean 'orderServiceImpl'
+22:26:51.454 [main] DEBUG org.springframework.beans.factory.support.DefaultListableBeanFactory - Autowiring by type from bean name 'orderServiceImpl' via constructor to bean named 'memoryMemberRepository'
+22:26:51.455 [main] DEBUG org.springframework.beans.factory.support.DefaultListableBeanFactory - Autowiring by type from bean name 'orderServiceImpl' via constructor to bean named 'rateDiscountPolicy'
+
+Process finished with exit code 0
+```  
+실행 결과를 보면, `ClassPathBeanDefinitionScanner`라는 문구가 있고             
+이로인해 컴포넌트 스캔이 일어났음을 예상할 수 있다.           
+그리고 그 밑으로 실제로 빈을 싱글톤 패턴으로 등록했다는 것 또한 알 수 있다.        
+    
+빈으로 등록한 객체들을 식별하는 이름도 같이 나오는데      
+스프링 빈의 기본 이름은 클래스명을 사용하되 맨 앞글자만 소문자를 사용한다.     
+      
+* 빈 이름 기본 전략: `MemberServiceImpl` 클래스 `memberServiceImpl`   
+* 빈 이름 직접 지정: 만약 스프링 빈의 이름을 직접 지정하고 싶으면  
+   * `@Component("memberService2")` 이런식으로 이름을 부여하면 된다.   
+      
+# 탐색 위치와 기본 스캔 대상       
+우선 디폴트 탐색위치부터 설명하는 편이 좋을 것 같다.          
+`@Component`어노테이션에 별다른 속성값을 주지 않을 경우             
+해당 클래스가 속한 패키지를 루트로 지정하여          
+**현재 및 하위 패키지의 `@Component`를 선언한 클래스를 찾는다.**           
+
+```java
+@ComponentScan(
+ basePackages = "hello.core",
+}
+```
+물론, 위와 같이 `basePackages`를 선언하여 특정 패키지를 루트로 지정할 수 있다.     
+
+* `basePackages = {"hello.core", "hello.service"}`   
+           
+위와 같이 여러 패키지를 스캔의 루트 위치로 지정할 수도 있다.     
+    
+```java
+@ComponentScan(
+ basePackageClasses = "AutoAppConfig.class",
+}
+```    
+`basePackageClasses`속성은 지정한 클래스의 패키지를 스캔의 시작 위치로 지정한다.       
+물론, 현재 클래스가 아닌 다른 클래스를 지정해서 사용해도 되며,            
+지정하지 않았다면 `@ComponentScan` 이 붙은 설정 정보 클래스의 패키지가 스캔의 시작 위치가 된다            
+    
+**권장하는 방법**     
+필자(kwj1270)및 김영한님의 개인적인 추천 방법은     
+설정 정보 클래스의 위치를 프로젝트 최상단에 두는 것이다.     
+(스프링 부트도 이 방법을 기본으로 제공한다.)   
+   
+예를 들어서 프로젝트가 아래와 같은 구조로 되어 있으면
+   
+* com.hello
+* com.hello.serivce
+* com.hello.repository
+  
+`com.hello` 프로젝트 시작 루트,        
+여기에 `AppConfig` 같은 메인 설정 정보를 두고,     
+`@ComponentScan` 어노테이션을 붙이고, 스캔 루트 지정 관련 속성 정의는 생략한다.        
+          
+이렇게 하면 `com.hello` 를 포함한 하위는 모두 자동으로 **컴포넌트 스캔의 대상이 된다.**            
+그리고 프로젝트 메인 설정 정보는 프로젝트의 대표 정보이기에 프로젝트 시작 루트 위치에 두는 것이 좋다.         
+        
+참고로 `@SpringBootApplication`를 프로젝트 시작 루트 위치에 두는 것이 관례이다.    
+그리고 `@SpringBootApplication` 안에는 `@ComponentScan` 이 들어있다.    
+         
+**컴포넌트 스캔 기본 대상**   
+컴포넌트 스캔은 `@Component` 뿐만 아니라 다음과 내용도 추가로 대상에 포함한다.
+
+* **@Component :** 컴포넌트 스캔에서 사용
+* **@Controlller :** 스프링 MVC 컨트롤러에서 사용
+* **@Service :** 스프링 비즈니스 로직에서 사용  
+* **@Repository :** 스프링 데이터 접근 계층에서 사용
+* **@Configuration :** 스프링 설정 정보에서 사용
+        
+아래 실제 어노테이션의 정의 내용을 살펴보면          
+`@Component` 어노테이션을 포함하고 있는 것을 알 수 있다.            
+`@Component` 어노테이션은 메타 어노테이션으로 다른 어노테이션의 정의에도 사용할 수 있다.  
+     
+```java
+@Component
+public @interface Controller {
+}
+@Component
+public @interface Service {
+}
+@Component
+public @interface Configuration {
+}
+```
+      
+사실 어노테이션에는 상속관계라는 것이 없다.          
+그래서 이렇게 어노테이션이 특정 어노테이션을 들고 있는 것을 인식할 수 있는 것은            
+자바 언어가 지원하는 기능은 아니고, 스프링이 지원하는 기능이다.              
+정확히는 스프링에서 제공하는 `어노테이션 프로세서/어노테이션 프로세싱`을 이용한 방법이다.        
+그렇기에 어노테이션에 부가 기능을 추가하여 더 효율적인 코드를 작성하도록 도와주는 것이다.     
+       
+다음 어노테이션들은 컴포넌트 스캔의 용도 뿐만 아니라 스프링 부가 기능을 수행한다.      
+      
+* **@Controller :** 스프링 MVC 컨트롤러로 인식    
+* **@Repository :** 스프링 데이터 접근 계층으로 인식하고, 데이터 계층의 예외를 스프링 예외로 변환해준다.    
+* **@Configuration :** 앞서 보았듯이 스프링 설정 정보로 인식하고,     
+  스프링 빈이 싱글톤을 유지하도록 추가 처리를 한다.    
+* **@Service :** 사실 `@Service` 는 특별한 처리를 하지 않는다.       
+  대신 개발자들이 핵심 비즈니스 로직이 여기에 있겠구나 라고 비즈니스 계층을 인식하는데 도움이 된다.    
+   
+참고로, `useDefaultFilters` 옵션이 기본으로 켜져있는데, 이 옵션을 끄면 기본 스캔 대상들이 제외된다.    
+    
+# 필터  
+`@ComponentScan`의 속성중에 특정 빈을 등록하거나 등록하지 않도록 하는 기능이 있다.     
+   
+* **includeFilters :** 컴포넌트 스캔 대상을 추가로 지정한다.    
+* **excludeFilters :** 컴포넌트 스캔에서 제외할 대상을 지정한다    
+  
+이 부분에 대해서 우선, 코드로 동작을 이해하고 정리해보자    
+   
+**src.test.hello.core.scan.filter.MyIncludeComponent.interface**
+```java
+package hello.core.scan.filter;
+
+import org.springframework.stereotype.Component;
+
+import java.lang.annotation.ElementType;
+import java.lang.annotation.Retention;
+import java.lang.annotation.RetentionPolicy;
+import java.lang.annotation.Target;
+
+@Target(ElementType.TYPE)
+@Retention(RetentionPolicy.RUNTIME)
+@Component
+public @interface MyIncludeComponent {
+
+}
+```
+   
+**src.test.hello.core.scan.filter.MyExcludeComponent.interface**
+```java
+package hello.core.scan.filter;
+
+import org.springframework.stereotype.Component;
+
+import java.lang.annotation.ElementType;
+import java.lang.annotation.Retention;
+import java.lang.annotation.RetentionPolicy;
+import java.lang.annotation.Target;
+
+@Target(ElementType.TYPE)
+@Retention(RetentionPolicy.RUNTIME)
+@Component
+public @interface MyExcludeComponent {
+
+}
+```
+
+**src.test.hello.core.scan.filter.BeanA.class**
+```java
+package hello.core.scan.filter;
+
+@MyIncludeComponent
+public class BeanA {
+}
+```
+
+**src.test.hello.core.scan.filter.BeanB.class**
+```java
+package hello.core.scan.filter;
+
+@MyIncludeComponent
+public class BeanB {
+}
+```
+   
+**src.test.hello.core.scan.filter.ComponentFilterAppConfigTest.class**
+```java
+package hello.core.scan.filter;
+
+import org.junit.jupiter.api.Test;
+import org.springframework.beans.factory.NoSuchBeanDefinitionException;
+import org.springframework.context.ApplicationContext;
+import org.springframework.context.annotation.AnnotationConfigApplicationContext;
+import org.springframework.context.annotation.ComponentScan;
+import org.springframework.context.annotation.Configuration;
+import org.springframework.context.annotation.FilterType;
+
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.springframework.context.annotation.ComponentScan.*;
+
+public class ComponentFilterAppConfigTest {
+
+    @Test
+    void filterScan() {
+        ApplicationContext ac = new AnnotationConfigApplicationContext(ComponentFilterAppConfig.class);
+        BeanA beanA = ac.getBean("beanA", BeanA.class);
+        assertThat(beanA).isNotNull();
+
+        assertThatThrownBy(()-> ac.getBean("beanB", BeanB.class))
+                .isInstanceOf(NoSuchBeanDefinitionException.class);
+    }
+
+    @ComponentScan(
+            includeFilters = @Filter(type = FilterType.ANNOTATION, classes = MyIncludeComponent.class),
+            excludeFilters = @Filter(type = FilterType.ANNOTATION, classes = MyExcludeComponent.class)
+    )
+    @Configuration
+    static class ComponentFilterAppConfig {
+
+    }
+}
+```   
+코드에서 알 수 있듯이, 특정 어노테이션에 따라 특정 빈을 등록하거나 예외시키고 있다.      
+이 과정에서 한 가지 눈여겨 볼 점이 있는데, 바로 `@ComponentScan.FilterType`이다.    
+이 부분에 대해서는 모르고 넘어갈 수 있는 부분이 많기에 정리를 하고 가면 좋을 것 같다 ☺     
+(우선 위코드에서는 일반적인 방법으로 작성시 코드가 길어서 `import static`으로 간략히 나타내었다.)   
+        
+**FilterType 옵션**  
+FilterType은 5가지 옵션이 있다.
+    
+* **ANNOTATION:** 기본값, 애노테이션을 인식해서 동작한다.
+  * ex) org.example.SomeAnnotation
+* **ASSIGNABLE_TYPE:** 지정한 타입과 자식 타입을 인식해서 동작한다.
+  * ex) org.example.SomeClass
+* **ASPECTJ:** AspectJ 패턴 사용
+  * ex) org.example..*Service+
+* **REGEX:** 정규 표현식
+  * ex) org\.example\.Default.*
+* **CUSTOM:** TypeFilter 이라는 인터페이스를 구현해서 처리
+  * ex) org.example.MyTypeFilter
+
+```java
+@ComponentScan(
+    includeFilters = {
+        @Filter(type = FilterType.ANNOTATION, classes = MyIncludeComponent.class),
+    },
+    excludeFilters = {
+        @Filter(type = FilterType.ANNOTATION, classes = MyExcludeComponent.class),
+        @Filter(type = FilterType.ASSIGNABLE_TYPE, classes = BeanA.class)
+    }
+)
+```
+만약, `BeanA`의 빈도 제외하고 싶다면 위와 같은 코드로 작성하면 된다.   
+정확한 로직에대해서는 조금 헷갈리지만, 아마 `include`의 하위인 `BeanA`를 제외한다는 것 같다.   
+   
+참고로 `@Component` 면 충분하기 때문에, `includeFilters` 를 사용할 일은 거의 없다.       
+`excludeFilters` 또한, 여러가지 이유로 간혹 사용할 때가 있지만 많지는 않다.   
+       
+특히, 최근 스프링 부트는 컴포넌트 스캔을 기본으로 제공하는데,        
+옵션을 변경하면서 사용하기보다는 스프링의 기본 설정에 최대한 맞추어 사용하는 것을 권장한다.   
+       
+# 중복 등록과 충돌      
+컴포넌트 스캔을 사용하면서도 등록된 빈들끼리의 충돌은 언제나 일어날 수 있다.      
+     
+빈이 충돌나는 경우로 크게 두가지 상황이 있다.    
+     
+1. 자동 빈 등록 vs 자동 빈 등록
+2. 수동 빈 등록 vs 자동 빈 등록
+         
+**자동 빈 등록 vs 자동 빈 등록**    
+컴포넌트 스캔에 의해 자동으로 스프링 빈이 등록되는데, 그 이름이 같은 경우 스프링은 오류를 발생시킨다.      
+스프링 빈 이름이 충돌나는 경우는 주로, 동일한 빈 이름으로 커스텀 빈 이름을 지정해주었을 때 발생한다.        
+
+* `ConflictingBeanDefinitionException` 예외 발생
+       
+**수동 빈 등록 vs 자동 빈 등록**      
+만약 수동 빈 등록과 자동 빈 등록에서 빈 이름이 충돌되면 어떻게 될까? 🤔  
+
+```java
+@Component
+public class MemoryMemberRepository implements MemberRepository {}
+```
+```java
+@Configuration
+@ComponentScan(
+    excludeFilters = @Filter(type = FilterType.ANNOTATION, classes = Configuration.class)
+)
+public class AutoAppConfig {
+    
+    @Bean(name = "memoryMemberRepository")
+    public MemberRepository memberRepository() {
+        return new MemoryMemberRepository();
+    }
+}
+```
+위와 같이 수동으로, 그리고 자동으로 빈을 등록할 경우 충돌이 일어난다.   
+하지만, **예외가 발생하는 것이 아니라 스프링 자체적으로 `Reaplacing`을 진행한다.      
+
+**로그**
+```log
+Overriding bean definition for bean 'memoryMemberRepository' with a different 
+definition: replacing
+``` 
+          
+수동빈과 자동빈 중에 수동빈이 우선 순위과 높아     
+`replacing`을 했다는 것은 수동빈이 자동빈을 오버라이딩했다는 뜻이다.   
+   
+개발자가 의도적으로 이런 결과를 기대했다면, 자동 보다는 수동이 우선권을 가지는 것이 좋다.       
+하지만 현실은 개발자가 의도적으로 설정해서 이런 결과가 만들어지기 보다는      
+여러 설정들이 꼬여서 이런 결과가 만들어지는 경우가 대부분이다.       
+그러면 정말 잡기 어려운 버그가 만들어진다.     
+항상 잡기 어려운 버그는 애매한 버그다.             
+그래서 **최근 스프링 부트에서는 수동 빈 등록과 자동 빈 등록이 충돌나면 오류가 발생하도록 기본 값을 바꾸었다.**       
+  
+**수동 빈 등록, 자동 빈 등록 오류시 스프링 부트 에러**
+```log
+Consider renaming one of the beans or enabling overriding by setting 
+spring.main.allow-bean-definition-overriding=true
+```
+스프링 부트인 `CoreApplication` 을 실행해보면 오류를 볼 수 있다.
+
+
+
 # 클래스패스          
 > **클래스패스 :** JVM이 프로그램을 실행할 때, 클래스파일을 찾는 데 기준이 되는 파일 경로      
            
