--- a/01 IoC 컨테이너/03 컴포넌트스캔.md
+++ b/01 IoC 컨테이너/03 컴포넌트스캔.md
@@ -10,12 +10,6 @@
 `@ComponentScan`은 **`@Component`어노테이션이 붙은 클래스를 찾아 자동으로 빈을 등록시켜준다.**     
 `@ComponentScan`은 해당 어노테이션이 붙은 클래스의 `클래스 패스`를 기준으로 동일/하위 패키지를 탐색한다.   
 
-|어노테이션 속성|설명|
-|-------------|----|
-|value|basePackages와 동일하다.<br>다만, value 특징상 해당 속성만 사용할 경우<br>**속성명을 생략할 수 있는 장점을 이용하기 위해서 정의되어있다.**|
-|basePackages|컴포넌트 스캔을 시작할 패스를 지정한다<br>선언하지 않을 경우 해당 어노테이션이 선언된 클래스의 클래스패스가 기준이된다.|   
-|nameGenerator|컴포넌트 스캔시 식별하는 이름 기준을 변경한다.<br>예를 들어 패키지가 다른 2개의 빈이 있다면 이름 충돌로 에러가난다<br>이를 해결하기 위해서는 `BeanNameGenerator`을 구현받아 이름 생성 전략을 바꿔야한다.<br>이때 `@ComponentScan`도 `BeanNameGenerator`의 구현체를 알아야 탐색시 적용할 수 있다.<br>[참고 사이트](https://eastglow.github.io/back-end/2018/12/30/Spring-Bean-%EC%83%9D%EC%84%B1-%EC%8B%9C-%EC%9D%B4%EB%A6%84%EC%97%90-%ED%8C%A8%ED%82%A4%EC%A7%80%EB%AA%85%EA%B9%8C%EC%A7%80-%ED%8F%AC%ED%95%A8%ED%95%98%EA%B8%B0.html)|
-
 ```java
 @Retention(RetentionPolicy.RUNTIME)
 @Target(ElementType.TYPE)
@@ -55,6 +49,15 @@ public @interface ComponentScan {
 
 }
 ```
+
+|어노테이션 속성|설명|
+|-------------|----|
+|value|basePackages와 동일하다.<br>다만, value 특징상 해당 속성만 사용할 경우<br>**속성명을 생략할 수 있는 장점을 이용하기 위해서 정의되어있다.**|
+|basePackages|컴포넌트 스캔을 시작할 패스를 지정한다<br>`{}`을 이용해 다중 선택 가능하다.<br>선언하지 않을 경우 해당 어노테이션이 선언된 클래스의 클래스패스가 기준이된다.|   
+|basePackageClasses|컴포넌트 스캔을 시작할 클래스를 지정한다<br>`{}`을 이용해 다중 선택 가능하다.<br>선언하지 않을 경우 해당 어노테이션이 선언된 클래스의 클래스패스가 기준이된다.|   
+|nameGenerator|컴포넌트 스캔시 식별하는 이름 기준을 변경한다.<br>예를 들어 패키지가 다른 2개의 빈이 있다면 이름 충돌로 에러가난다<br>이를 해결하기 위해서는 `BeanNameGenerator`을 구현받아 이름 생성 전략을 바꿔야한다.<br>이때 `@ComponentScan`도 `BeanNameGenerator`의 구현체를 알아야 탐색시 적용할 수 있다.<br>기본은 `org.springframework.beans.factory.support.BeanNameGenerator`이다.|
+|scopeResolver||
+
 ## 
 
 
@@ -578,3 +581,6 @@ spring.main.allow-bean-definition-overriding=true
 이와 같은 메커니즘이 여러군데 존재하는데,       
 스프링부트에서 `SpringApplication.run()`를 가진 클래스도 최상위 디렉터리의 클래스여야 한다.      
    
+# 참고
+[참고 사이트](https://eastglow.github.io/back-end/2018/12/30/Spring-Bean-%EC%83%9D%EC%84%B1-%EC%8B%9C-%EC%9D%B4%EB%A6%84%EC%97%90-%ED%8C%A8%ED%82%A4%EC%A7%80%EB%AA%85%EA%B9%8C%EC%A7%80-%ED%8F%AC%ED%95%A8%ED%95%98%EA%B8%B0.html)
+
