--- a/01 IoC 컨테이너/03 컴포넌트스캔.md
+++ b/01 IoC 컨테이너/03 컴포넌트스캔.md
@@ -57,7 +57,7 @@ public @interface ComponentScan {
 |basePackageClasses|컴포넌트 스캔을 시작할 클래스를 지정한다<br>`{}`을 이용해 다중 선택 가능하다.<br>선언하지 않을 경우 해당 어노테이션이 선언된 클래스의 클래스패스가 기준이된다.|   
 |nameGenerator|컴포넌트 스캔시 식별하는 이름 기준을 변경한다.<br>예를 들어 패키지가 다른 2개의 빈이 있다면 이름 충돌로 에러가난다<br>이를 해결하기 위해서는 `BeanNameGenerator`을 구현받아 이름 생성 전략을 바꿔야한다.<br>이때 `@ComponentScan`도 `BeanNameGenerator`의 구현체를 알아야 탐색시 적용할 수 있다.<br>기본은 `org.springframework.beans.factory.support.BeanNameGenerator`이다.|
 |scopeResolver|레퍼런스할 곳을 찾지 못해 정리를 못할 것 같다<br>단 빈의 스코프를 처리하는 역할과 관련이 있는 것 같다.<br>기본은 `org.springframework.context.annotation.AnnotationScopeMetadataResolver`|
-|scopedProxy|프록시 설정 여부에 대한 설정어노테이션이다.<br>ScopedProxyMode.DEFAULT : <br>ScopedProxyMode.NO : <br>ScopedProxyMode.INTERFACES : <br>ScopedProxyMode.TARGET_CLASS|
+|scopedProxy|프록시 설정 여부에 대한 설정어노테이션이다.<br>ScopedProxyMode.NO : 프록시를 만들지 않는다.<br>ScopedProxyMode.DEFAULT : 기본 설정이며, NO와 동일하다 <br>ScopedProxyMode.INTERFACES : 인터페이스에 대한 프록시설정을 한다.(JDK 다이나믹 프록시 이용)<br>ScopedProxyMode.TARGET_CLASS : 클래스에 대한 프록시를 사용한다.(CGLIB 이용)|
 
 ## 
 
