--- a/01 IoC 컨테이너/03 컴포넌트스캔.md
+++ b/01 IoC 컨테이너/03 컴포넌트스캔.md
@@ -60,8 +60,8 @@ public @interface ComponentScan {
 |scopedProxy|프록시 설정 여부에 대한 설정어노테이션이다.<br>ScopedProxyMode.NO : 프록시를 만들지 않는다.<br>ScopedProxyMode.DEFAULT : 기본 설정이며, NO와 동일하다 <br>ScopedProxyMode.INTERFACES : 인터페이스에 대한 프록시설정을 한다.(JDK 다이나믹 프록시 이용)<br>ScopedProxyMode.TARGET_CLASS : 클래스에 대한 프록시를 사용한다.(CGLIB 이용)|
 |resourcePattern|스캔 패턴을 지정한다.<br>특정 패턴을 가진 클래스들만 스캔하겠다고 선언한다.<br>예시 : `resourcePattern="**/*.class"`<br>기본은 `ClassPathScanningCandidateComponentProvider.DEFAULT_RESOURCE_PATTERN;`|
 |useDefaultFilters|이름 그대로 해당 패키지에 기본 필터를 적용할지 여부를 설정하는 속성이다.<br>기본 필터는 `@Component`가 붙은 클래스를 빈으로 등록하는 것이다.<br>기본은 `true` 이다.|
-|||
-|||
+|includeFilters|특정 형식에 대해서 스캔 대상에 포함하는 필터를 적용한다.<br>`@ComponentScan.Filter()`를 주로 사용한다.<br>예시 : `@ComponentScan(includeFilters = @ComponentScan.Filter(type = FilterType.ANNOTATION, classes = String.class))`|
+|excludeFilters|특정 형식에 대해서 스캔 대상에서 제외하는 필터를 적용한다.<br>`@ComponentScan.Filter()`를 주로 사용한다.<br><br>예시 : `@ComponentScan(includeFilters = @ComponentScan.Filter(type = FilterType.ANNOTATION, classes = String.class))`|
 
 
 ## 
