--- a/01 IoC 컨테이너/03 컴포넌트스캔.md
+++ b/01 IoC 컨테이너/03 컴포넌트스캔.md
@@ -62,7 +62,7 @@ public @interface ComponentScan {
 |useDefaultFilters|이름 그대로 해당 패키지에 기본 필터를 적용할지 여부를 설정하는 속성이다.<br>기본 필터는 `@Component`가 붙은 클래스를 빈으로 등록하는 것이다.<br>기본은 `true` 이다.|
 |includeFilters|특정 형식에 대해서 스캔 대상에 포함하는 필터를 적용한다.<br>`@ComponentScan.Filter()`를 주로 사용한다.<br>예시 :<br>`@ComponentScan(includeFilters = @ComponentScan.Filter(type = FilterType.ANNOTATION, classes = String.class))`|
 |excludeFilters|특정 형식에 대해서 스캔 대상에서 제외하는 필터를 적용한다.<br>`@ComponentScan.Filter()`를 주로 사용한다.<br><br>예시 :<br>`@ComponentScan(includeFilters = @ComponentScan.Filter(type = FilterType.ANNOTATION, classes = String.class))`|
-
+|lazyInit|빈 생성에 대한 지연로딩을 실시한다.<br>|
 
 ## 
 
