--- a/01 IoC 컨테이너/03 컴포넌트스캔.md
+++ b/01 IoC 컨테이너/03 컴포넌트스캔.md
@@ -64,210 +64,10 @@ public @interface ComponentScan {
 |excludeFilters|특정 형식에 대해서 스캔 대상에서 제외하는 필터를 적용한다.<br>`@ComponentScan.Filter()`를 주로 사용한다.<br><br>예시 :<br>`@ComponentScan(includeFilters = @ComponentScan.Filter(type = FilterType.ANNOTATION, classes = String.class))`|
 |lazyInit|빈 생성에 대한 지연로딩을 실시한다.<br>지연로딩 이유는 App 실행을 빠르게하기 위해서다<br>단 오류검출이 런타임에 발생한다.<br>기본값은 `false` 이다. <br>https://brunch.co.kr/@springboot/219|
 
-## 
-
-
-
-한 가지 특이점으로는 `@ComponentScan`에 속성값에 필터 기능을 추가했다.       
-`excludeFilters`은 제외할 클래스를 지정하는데 사용하는 어노테이션 속성이다.     
-  
-참고로, 컴포넌트 스캔을 사용하면 `@Configuration` 이 붙은 설정 정보도 자동으로 등록된다.      
-`@Configuration` 이 컴포넌트 스캔의 대상이 된 이유도       
-`@Configuration`의 소스코드를 열어보면 `@Component` 어노테이션이 붙어있기 때문이다.    
-    
-그러면 이제 빈으로 등록할 클래스들에 `@Component`어노테이션을 붙이러 가보자     
-     
-**RateDiscountPolicy.class**
-```java
-package hello.core.discount;
-
-import hello.core.member.Grade;
-import hello.core.member.Member;
-import org.springframework.stereotype.Component;
-
-@Component
-public class RateDiscountPolicy implements DiscountPolicy{
-
-    private int discountPercent = 10;
-
-    @Override
-    public int discount(Member member, int price) {
-        if(member.getGrade() == Grade.VIP){
-            return price * discountPercent / 100;
-        }
-        return 0;
-    }
-}
-```
-
-**MemoryMemberRepository.class**
-```java
-package hello.core.member;
-
-import org.springframework.stereotype.Component;
-
-import java.util.HashMap;
-import java.util.Map;
-
-@Component
-public class MemoryMemberRepository implements MemberRepository {
-
-    private static Map<Long, Member> store = new HashMap<>();
-
-    @Override
-    public void save(Member member) {
-        store.put(member.getId(), member);
-    }
-
-    @Override
-    public Member findById(Long memberId) {
-        return store.get(memberId);
-    }
-
-}
-```
-
-**MemberServiceImpl.class**
-```java
-package hello.core.member;
-
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Component;
-
-@Component
-public class MemberServiceImpl implements MemberService {
-
-    private final MemberRepository memberRepository;
-
-    @Autowired
-    public MemberServiceImpl(MemberRepository memberRepository) {
-        this.memberRepository = memberRepository;
-    }
-
-    @Override
-    public void join(Member member) {
-        memberRepository.save(member);
-    }
-
-    @Override
-    public Member findMember(Long memberId) {
-        return memberRepository.findById(memberId);
-    }
-
-    // 테스트용 메서드
-    public MemberRepository getMemberRepository() {
-        return memberRepository;
-    }
-
-}
-```
+## 탐색 위치와 기본 스캔 대상       
+`@Component`에 별다른 속성값을 주지 않을 경우   
+해당 클래스가 속한 패키지를 루트로 지정하여 **현재 및 하위 패키지의 `@Component`를 선언한 클래스를 찾는다.**           
    
-**OrderServiceImpl.class**
-```java
-package hello.core.order;
-
-import hello.core.discount.DiscountPolicy;
-import hello.core.member.Member;
-import hello.core.member.MemberRepository;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Component;
-
-@Component
-public class OrderServiceImpl implements OrderService {
-
-    private final MemberRepository memberRepository;
-    private final DiscountPolicy discountPolicy;
-
-    @Autowired
-    public OrderServiceImpl(MemberRepository memberRepository, DiscountPolicy discountPolicy) {
-        this.memberRepository = memberRepository;
-        this.discountPolicy = discountPolicy;
-    }
-
-    @Override
-    public Order createOrder(Long memberId, String itemName, int itemPrice) {
-        Member member = memberRepository.findById(memberId);
-        int discountPrice = discountPolicy.discount(member, itemPrice);
-        return new Order(memberId, itemName, itemPrice, discountPrice);
-    }
-
-    // 테스트 용도
-    public MemberRepository getMemberRepository() {
-        return memberRepository;
-    }
-
-}
-```
-   
-___     
-   
-이제, 실제로 빈이 등록되었는지 그리고 알맞은 클래스타입을 반환하는지 테스트를해보자   
-    
-**src.test.hello.core.scan.AutoAppConfigTest.class**
-```java
-package hello.core.scan;
-
-import hello.core.AutoAppConfig;
-import hello.core.member.MemberService;
-import org.junit.jupiter.api.Test;
-import org.springframework.context.annotation.AnnotationConfigApplicationContext;
-
-import static org.assertj.core.api.Assertions.assertThat;
-
-public class AutoAppConfigTest {
-
-    @Test
-    void basicScan() {
-        // given
-        AnnotationConfigApplicationContext ac = new AnnotationConfigApplicationContext(AutoAppConfig.class);
-
-        // when
-        MemberService memberService = ac.getBean(MemberService.class);
-
-        // then
-        assertThat(memberService).isInstanceOf(MemberService.class);
-    }
-}
-```
-```java
-22:26:51.025 [main] DEBUG org.springframework.context.annotation.AnnotationConfigApplicationContext - Refreshing org.springframework.context.annotation.AnnotationConfigApplicationContext@18a70f16
-22:26:51.051 [main] DEBUG org.springframework.beans.factory.support.DefaultListableBeanFactory - Creating shared instance of singleton bean 'org.springframework.context.annotation.internalConfigurationAnnotationProcessor'
-22:26:51.201 [main] DEBUG org.springframework.context.annotation.ClassPathBeanDefinitionScanner - Identified candidate component class: file [/Users/ujae/IdeaProjects/inflearn/core/out/production/classes/hello/core/discount/RateDiscountPolicy.class]
-22:26:51.210 [main] DEBUG org.springframework.context.annotation.ClassPathBeanDefinitionScanner - Identified candidate component class: file [/Users/ujae/IdeaProjects/inflearn/core/out/production/classes/hello/core/member/MemberServiceImpl.class]
-22:26:51.212 [main] DEBUG org.springframework.context.annotation.ClassPathBeanDefinitionScanner - Identified candidate component class: file [/Users/ujae/IdeaProjects/inflearn/core/out/production/classes/hello/core/member/MemoryMemberRepository.class]
-22:26:51.214 [main] DEBUG org.springframework.context.annotation.ClassPathBeanDefinitionScanner - Identified candidate component class: file [/Users/ujae/IdeaProjects/inflearn/core/out/production/classes/hello/core/order/OrderServiceImpl.class]
-22:26:51.384 [main] DEBUG org.springframework.beans.factory.support.DefaultListableBeanFactory - Creating shared instance of singleton bean 'org.springframework.context.event.internalEventListenerProcessor'
-22:26:51.387 [main] DEBUG org.springframework.beans.factory.support.DefaultListableBeanFactory - Creating shared instance of singleton bean 'org.springframework.context.event.internalEventListenerFactory'
-22:26:51.388 [main] DEBUG org.springframework.beans.factory.support.DefaultListableBeanFactory - Creating shared instance of singleton bean 'org.springframework.context.annotation.internalAutowiredAnnotationProcessor'
-22:26:51.390 [main] DEBUG org.springframework.beans.factory.support.DefaultListableBeanFactory - Creating shared instance of singleton bean 'org.springframework.context.annotation.internalCommonAnnotationProcessor'
-22:26:51.408 [main] DEBUG org.springframework.beans.factory.support.DefaultListableBeanFactory - Creating shared instance of singleton bean 'autoAppConfig'
-22:26:51.416 [main] DEBUG org.springframework.beans.factory.support.DefaultListableBeanFactory - Creating shared instance of singleton bean 'rateDiscountPolicy'
-22:26:51.416 [main] DEBUG org.springframework.beans.factory.support.DefaultListableBeanFactory - Creating shared instance of singleton bean 'memberServiceImpl'
-22:26:51.449 [main] DEBUG org.springframework.beans.factory.support.DefaultListableBeanFactory - Creating shared instance of singleton bean 'memoryMemberRepository'
-22:26:51.451 [main] DEBUG org.springframework.beans.factory.support.DefaultListableBeanFactory - Autowiring by type from bean name 'memberServiceImpl' via constructor to bean named 'memoryMemberRepository'
-22:26:51.452 [main] DEBUG org.springframework.beans.factory.support.DefaultListableBeanFactory - Creating shared instance of singleton bean 'orderServiceImpl'
-22:26:51.454 [main] DEBUG org.springframework.beans.factory.support.DefaultListableBeanFactory - Autowiring by type from bean name 'orderServiceImpl' via constructor to bean named 'memoryMemberRepository'
-22:26:51.455 [main] DEBUG org.springframework.beans.factory.support.DefaultListableBeanFactory - Autowiring by type from bean name 'orderServiceImpl' via constructor to bean named 'rateDiscountPolicy'
-
-Process finished with exit code 0
-```  
-실행 결과를 보면, `ClassPathBeanDefinitionScanner`라는 문구가 있고             
-이로인해 컴포넌트 스캔이 일어났음을 예상할 수 있다.           
-그리고 그 밑으로 실제로 빈을 싱글톤 패턴으로 등록했다는 것 또한 알 수 있다.        
-    
-빈으로 등록한 객체들을 식별하는 이름도 같이 나오는데      
-스프링 빈의 기본 이름은 클래스명을 사용하되 맨 앞글자만 소문자를 사용한다.     
-      
-* 빈 이름 기본 전략: `MemberServiceImpl` 클래스 `memberServiceImpl`   
-* 빈 이름 직접 지정: 만약 스프링 빈의 이름을 직접 지정하고 싶으면  
-   * `@Component("memberService2")` 이런식으로 이름을 부여하면 된다.   
-      
-# 탐색 위치와 기본 스캔 대상       
-우선 디폴트 탐색위치부터 설명하는 편이 좋을 것 같다.          
-`@Component`어노테이션에 별다른 속성값을 주지 않을 경우             
-해당 클래스가 속한 패키지를 루트로 지정하여          
-**현재 및 하위 패키지의 `@Component`를 선언한 클래스를 찾는다.**           
-
 ```java
 @ComponentScan(
  basePackages = "hello.core",
