--- a/01 IoC 컨테이너/03 컴포넌트스캔.md
+++ b/01 IoC 컨테이너/03 컴포넌트스캔.md
@@ -63,33 +63,32 @@ public @interface ComponentScan {
 |includeFilters|특정 형식에 대해서 스캔 대상에 포함하는 필터를 적용한다.<br>`@ComponentScan.Filter()`를 주로 사용한다.<br>예시 :<br>`@ComponentScan(includeFilters = @ComponentScan.Filter(type = FilterType.ANNOTATION, classes = String.class))`|
 |excludeFilters|특정 형식에 대해서 스캔 대상에서 제외하는 필터를 적용한다.<br>`@ComponentScan.Filter()`를 주로 사용한다.<br><br>예시 :<br>`@ComponentScan(includeFilters = @ComponentScan.Filter(type = FilterType.ANNOTATION, classes = String.class))`|
 |lazyInit|빈 생성에 대한 지연로딩을 실시한다.<br>지연로딩 이유는 App 실행을 빠르게하기 위해서다<br>단 오류검출이 런타임에 발생한다.<br>기본값은 `false` 이다. <br>https://brunch.co.kr/@springboot/219|
-
-## 탐색 위치와 기본 스캔 대상       
-`@Component`에 별다른 속성값을 주지 않을 경우   
-해당 클래스가 속한 패키지를 루트로 지정하여 **현재 및 하위 패키지의 `@Component`를 선언한 클래스를 찾는다.**           
+ 
+## 탐색 위치와 기본 스캔 대상         
+`@Component`에 별다른 속성값을 주지 않을 경우     
+해당 클래스가 속한 패키지를 루트로 지정하여      
+**현재 및 하위 패키지의 `@Component`를 선언한 클래스를 찾는다.**              
    
 ```java
-@ComponentScan(
- basePackages = "hello.core",
-}
+@ComponentScan(basePackages = "hello.core")  
 ```
 물론, 위와 같이 `basePackages`를 선언하여 특정 패키지를 루트로 지정할 수 있다.     
 
-* `basePackages = {"hello.core", "hello.service"}`   
-           
+```java
+@ComponentScan(basePackages = {"hello.core", "hello.service"})      
+```           
 위와 같이 여러 패키지를 스캔의 루트 위치로 지정할 수도 있다.     
-    
+      
 ```java
 @ComponentScan(
- basePackageClasses = "AutoAppConfig.class",
+ basePackageClasses = AutoAppConfig.class,
 }
 ```    
 `basePackageClasses`속성은 지정한 클래스의 패키지를 스캔의 시작 위치로 지정한다.       
 물론, 현재 클래스가 아닌 다른 클래스를 지정해서 사용해도 되며,            
 지정하지 않았다면 `@ComponentScan` 이 붙은 설정 정보 클래스의 패키지가 스캔의 시작 위치가 된다            
-    
+        
 **권장하는 방법**     
-필자(kwj1270)및 김영한님의 개인적인 추천 방법은     
 설정 정보 클래스의 위치를 프로젝트 최상단에 두는 것이다.     
 (스프링 부트도 이 방법을 기본으로 제공한다.)   
    
