--- a/01 IoC 컨테이너/03 컴포넌트스캔.md
+++ b/01 IoC 컨테이너/03 컴포넌트스캔.md
@@ -6,7 +6,7 @@
        
 이를 해소해주기 위해, **스프링에서는 `@ComponentScan`이라는 기능을 제공한다.**         
 
-# 컴포넌트 스캔이란? 
+# 📗 컴포넌트 스캔이란 
 `@ComponentScan`은 **`@Component`어노테이션이 붙은 클래스를 찾아 자동으로 빈을 등록시켜준다.**     
 `@ComponentScan`은 해당 어노테이션이 붙은 클래스의 `클래스 패스`를 기준으로 동일/하위 패키지를 탐색한다.   
 
@@ -64,7 +64,7 @@ public @interface ComponentScan {
 |excludeFilters|특정 형식에 대해서 스캔 대상에서 제외하는 필터를 적용한다.<br>`@ComponentScan.Filter()`를 주로 사용한다.<br><br>예시 :<br>`@ComponentScan(includeFilters = @ComponentScan.Filter(type = FilterType.ANNOTATION, classes = String.class))`|
 |lazyInit|빈 생성에 대한 지연로딩을 실시한다.<br>지연로딩 이유는 App 실행을 빠르게하기 위해서다<br>단 오류검출이 런타임에 발생한다.<br>기본값은 `false` 이다. <br>https://brunch.co.kr/@springboot/219|
  
-## 탐색 위치와 기본 스캔 대상         
+## 📖 탐색 위치와 기본 스캔 대상         
 `@Component`에 별다른 속성값을 주지 않을 경우     
 해당 클래스가 속한 패키지를 루트로 지정하여      
 **현재 및 하위 패키지의 `@Component`를 선언한 클래스를 찾는다.**              
