--- a/01 IoC 컨테이너/03 컴포넌트스캔.md
+++ b/01 IoC 컨테이너/03 컴포넌트스캔.md
@@ -6,7 +6,7 @@
        
 이를 해소해주기 위해, **스프링에서는 `@ComponentScan`이라는 기능을 제공한다.**         
 
-# 📗 컴포넌트 스캔이란 
+# 📗 @ComponentScan   
 `@ComponentScan`은 **`@Component`어노테이션이 붙은 클래스를 찾아 자동으로 빈을 등록시켜준다.**     
 `@ComponentScan`은 해당 어노테이션이 붙은 클래스의 `클래스 패스`를 기준으로 동일/하위 패키지를 탐색한다.   
 
