--- a/01 IoC 컨테이너/03 컴포넌트스캔.md
+++ b/01 IoC 컨테이너/03 컴포넌트스캔.md
@@ -84,72 +84,25 @@ public @interface ComponentScan {
  basePackageClasses = AutoAppConfig.class,
 }
 ```    
-`basePackageClasses`속성은 지정한 클래스의 패키지를 스캔의 시작 위치로 지정한다.       
+`basePackageClasses`속성은 지정한 클래스의 `클래스 패스`를 스캔의 시작 위치로 지정한다.            
 물론, 현재 클래스가 아닌 다른 클래스를 지정해서 사용해도 되며,            
 지정하지 않았다면 `@ComponentScan` 이 붙은 설정 정보 클래스의 패키지가 스캔의 시작 위치가 된다            
-        
-**권장하는 방법**     
-설정 정보 클래스의 위치를 프로젝트 최상단에 두는 것이다.     
-(스프링 부트도 이 방법을 기본으로 제공한다.)   
-   
-예를 들어서 프로젝트가 아래와 같은 구조로 되어 있으면
-   
-* com.hello
-* com.hello.serivce
-* com.hello.repository
-  
-`com.hello` 프로젝트 시작 루트,        
-여기에 `AppConfig` 같은 메인 설정 정보를 두고,     
-`@ComponentScan` 어노테이션을 붙이고, 스캔 루트 지정 관련 속성 정의는 생략한다.        
-          
-이렇게 하면 `com.hello` 를 포함한 하위는 모두 자동으로 **컴포넌트 스캔의 대상이 된다.**            
-그리고 프로젝트 메인 설정 정보는 프로젝트의 대표 정보이기에 프로젝트 시작 루트 위치에 두는 것이 좋다.         
-        
-참고로 `@SpringBootApplication`를 프로젝트 시작 루트 위치에 두는 것이 관례이다.    
-그리고 `@SpringBootApplication` 안에는 `@ComponentScan` 이 들어있다.    
-         
-**컴포넌트 스캔 기본 대상**   
-컴포넌트 스캔은 `@Component` 뿐만 아니라 다음과 내용도 추가로 대상에 포함한다.
-
-* **@Component :** 컴포넌트 스캔에서 사용
-* **@Controlller :** 스프링 MVC 컨트롤러에서 사용
-* **@Service :** 스프링 비즈니스 로직에서 사용  
-* **@Repository :** 스프링 데이터 접근 계층에서 사용
-* **@Configuration :** 스프링 설정 정보에서 사용
-        
-아래 실제 어노테이션의 정의 내용을 살펴보면          
-`@Component` 어노테이션을 포함하고 있는 것을 알 수 있다.            
-`@Component` 어노테이션은 메타 어노테이션으로 다른 어노테이션의 정의에도 사용할 수 있다.  
+                   
+### 📄 권장하는 방법             
+설정 정보 클래스의 위치를 프로젝트 최상단에 두는 것이다.                     
+즉, `@SpringBootApplication`를 프로젝트 시작 루트 위치에 두는 것이 관례이다.           
+왜냐하면 `@SpringBootApplication` 안에는 `@ComponentScan` 이 들어있다.        
      
-```java
-@Component
-public @interface Controller {
-}
-@Component
-public @interface Service {
-}
-@Component
-public @interface Configuration {
-}
-```
-      
-사실 어노테이션에는 상속관계라는 것이 없다.          
-그래서 이렇게 어노테이션이 특정 어노테이션을 들고 있는 것을 인식할 수 있는 것은            
-자바 언어가 지원하는 기능은 아니고, 스프링이 지원하는 기능이다.              
-정확히는 스프링에서 제공하는 `어노테이션 프로세서/어노테이션 프로세싱`을 이용한 방법이다.        
-그렇기에 어노테이션에 부가 기능을 추가하여 더 효율적인 코드를 작성하도록 도와주는 것이다.     
-       
-다음 어노테이션들은 컴포넌트 스캔의 용도 뿐만 아니라 스프링 부가 기능을 수행한다.      
-      
+**어노테이션들은 컴포넌트 스캔의 용도 뿐만 아니라 스프링 부가 기능을 수행한다.**         
 * **@Controller :** 스프링 MVC 컨트롤러로 인식    
 * **@Repository :** 스프링 데이터 접근 계층으로 인식하고, 데이터 계층의 예외를 스프링 예외로 변환해준다.    
 * **@Configuration :** 앞서 보았듯이 스프링 설정 정보로 인식하고,     
   스프링 빈이 싱글톤을 유지하도록 추가 처리를 한다.    
 * **@Service :** 사실 `@Service` 는 특별한 처리를 하지 않는다.       
   대신 개발자들이 핵심 비즈니스 로직이 여기에 있겠구나 라고 비즈니스 계층을 인식하는데 도움이 된다.    
-   
+      
 참고로, `useDefaultFilters` 옵션이 기본으로 켜져있는데, 이 옵션을 끄면 기본 스캔 대상들이 제외된다.    
-    
+      
 # 필터  
 `@ComponentScan`의 속성중에 특정 빈을 등록하거나 등록하지 않도록 하는 기능이 있다.     
    
