--- a/01 IoC 컨테이너/03 컴포넌트스캔.md
+++ b/01 IoC 컨테이너/03 컴포넌트스캔.md
@@ -149,23 +149,20 @@ FilterType은 5가지 옵션이 있다.
     }
 )
 ```
-만약, `BeanA`의 빈도 제외하고 싶다면 위와 같은 코드로 작성하면 된다.   
-정확한 로직에대해서는 조금 헷갈리지만, 아마 `include`의 하위인 `BeanA`를 제외한다는 것 같다.   
-   
-참고로 `@Component` 면 충분하기 때문에, `includeFilters` 를 사용할 일은 거의 없다.       
-`excludeFilters` 또한, 여러가지 이유로 간혹 사용할 때가 있지만 많지는 않다.   
-       
-특히, 최근 스프링 부트는 컴포넌트 스캔을 기본으로 제공하는데,        
-옵션을 변경하면서 사용하기보다는 스프링의 기본 설정에 최대한 맞추어 사용하는 것을 권장한다.   
-       
-# 중복 등록과 충돌      
-컴포넌트 스캔을 사용하면서도 등록된 빈들끼리의 충돌은 언제나 일어날 수 있다.      
-     
+`@Component`면 충분하기 때문에     
+`includeFilters` 를 사용할 일은 거의 없다.             
+`excludeFilters` 또한, 여러가지 이유로 간혹 사용할 때가 있지만 많지는 않다.          
+              
+특히, 최근 스프링 부트는 컴포넌트 스캔을 기본으로 제공하는데,          
+**옵션을 변경하면서 사용하기보다는 스프링의 기본 설정에 최대한 맞추어 사용하는 것을 권장한다.**      
+           
+## 📖 중복 등록과 충돌      
+컴포넌트 스캔을 사용하면서도 등록된 빈들끼리의 충돌은 언제나 일어날 수 있다.          
 빈이 충돌나는 경우로 크게 두가지 상황이 있다.    
-     
+       
 1. 자동 빈 등록 vs 자동 빈 등록
 2. 수동 빈 등록 vs 자동 빈 등록
-         
+          
 **자동 빈 등록 vs 자동 빈 등록**    
 컴포넌트 스캔에 의해 자동으로 스프링 빈이 등록되는데, 그 이름이 같은 경우 스프링은 오류를 발생시킨다.      
 스프링 빈 이름이 충돌나는 경우는 주로, 동일한 빈 이름으로 커스텀 빈 이름을 지정해주었을 때 발생한다.        
