--- a/01 IoC 컨테이너/03 컴포넌트스캔.md
+++ b/01 IoC 컨테이너/03 컴포넌트스캔.md
@@ -189,26 +189,24 @@ public class AutoAppConfig {
     }
 }
 ``` 
-위와 같이 수동으로, 그리고 자동으로 빈을 등록할 경우 충돌이 일어난다.      
-하지만, **예외가 발생하는 것이 아니라 스프링 자체적으로 `Reaplacing`을 진행한다.       
-   
+위와 같이 수동으로, 그리고 자동으로 빈을 등록할 경우 충돌이 일어난다.        
+     
 **로그**
-```log
+```sh
 Overriding bean definition for bean 'memoryMemberRepository' with a different 
 definition: replacing
 ``` 
-               
-수동빈과 자동빈 중에 수동빈이 우선 순위과 높아         
-**`replacing`을 했다는 것은 수동빈이 자동빈을 오버라이딩했다는 뜻이다.**         
-그러나 **최근 스프링 부트에서는 수동 빈 등록과 자동 빈 등록이 충돌나면 오류가 발생하도록 기본 값을 바꾸었다.**       
+과거에는, **예외가 발생하는 것이 아니라 스프링 자체적으로 `Reaplacing`을 진행한다.**                         
+**`replacing`을 했다는 것은 수동빈이 자동빈을 오버라이딩했다는 뜻이다.(수동빈이 우선 순위가 높아)**          
   
-**수동 빈 등록, 자동 빈 등록 오류시 스프링 부트 에러**
-```log
+그러나 **최근 스프링 부트에서는 수동 빈 등록과 자동 빈 등록이 충돌나면 오류가 발생하도록 기본 값을 바꾸었다.**       
+      
+**수동 빈 등록, 자동 빈 등록 오류시 스프링 부트 에러**     
+```sh
 Consider renaming one of the beans or enabling overriding by setting 
 spring.main.allow-bean-definition-overriding=true
 ```
 스프링 부트인 `CoreApplication` 을 실행해보면 오류를 볼 수 있다.
-
 
 
 # 클래스패스          
