--- a/01 IoC 컨테이너/05 빈 스코프.md
+++ b/01 IoC 컨테이너/05 빈 스코프.md
@@ -1,23 +1,18 @@
 빈 스코프
 =====================
 
-# 빈 스코프란?      
-**빈의 생명주기를 프로그램의 시작과 종료까지로 존재시켜야 할까?🤔**             
-                   
-기존에 우리가 알고 있는 방식은 싱글톤 스코프이다.         
-싱글톤 스코프는 스프링에서 기본으로 설정되어 있는 스코프로 프로그램의 시작과 종료까지 존재한다.      
-하지만, `스코프`라는 이름에서 알 수 있듯이 범위의 한 종류일 뿐이다.   
-즉, 스프링에서는 싱글톤 스코프 외에 다른 스코프들도 존재한다.   
-       
-**스프링은 다음과 같은 다양한 스코프를 지원한다.**     
+# 빈 스코프란?  
+**스프링 빈 스코프의 기본 전략은 `싱글톤`이다.**     
+하지만 이외에도 다양한 전략들이 있으니 이를 알아보자.   
+   
+**스프링 빈 스코프**     
 * **Singletone:** 기본 스코프, 스프링 컨테이너의 시작과 종료까지 유지되는 가장 넓은 범위의 스코프이다.      
 * **prototype:** 스프링 컨테이너는 프로토타입 빈의 생성과 의존관계 주입까지만 관여하고 더는 관리하지 않는 매우 짧은 범위의 스코프이다.     
 * **request:** 웹 요청이 들어오고 나갈때 까지 유지되는 스코프이다.    
 * **session:** 웹 세션이 생성되고 종료될 때 까지 유지되는 스코프이다.    
 * **application:** 웹의 서블릿 컨텍스와 같은 범위로 유지되는 스코프이다.    
-    
-이러한 빈 스코프는 `@Scope`라는 어노테이션을 통해 설정할 수 있으며       
-빈 등록시 설정하는 것이기에 `@Bean`어노테이션과 함께 사용해야한다.          
+             
+빈 스코프는 **`@Scope`을 통해 설정할 수 있으며 `@Bean`과 함께 사용한다.**      
    
 **컴포넌트 스캔 등록**
 ```java
