--- a/01 IoC 컨테이너/05 빈 스코프.md
+++ b/01 IoC 컨테이너/05 빈 스코프.md
@@ -12,7 +12,7 @@
 * **session:** 웹 세션이 생성되고 종료될 때 까지 유지되는 스코프이다.    
 * **application:** 웹의 서블릿 컨텍스와 같은 범위로 유지되는 스코프이다.    
              
-빈 스코프는 **`@Scope`을 통해 설정할 수 있으며 `@Bean`과 함께 사용한다.**      
+빈 스코프는 **`@Scope`을 통해 설정할 수 있으며 `@Bean`또는`@Component`등과 함께 사용한다.**      
    
 **컴포넌트 스캔 등록**
 ```java
