--- a/01 IoC 컨테이너/05 빈 스코프.md
+++ b/01 IoC 컨테이너/05 빈 스코프.md
@@ -6,12 +6,17 @@
 하지만 이외에도 다양한 전략들이 있으니 이를 알아보자.   
    
 **스프링 빈 스코프**     
-* **Singletone:** 기본 스코프, 스프링 컨테이너의 시작과 종료까지 유지되는 가장 넓은 범위의 스코프이다.      
-* **prototype:** 스프링 컨테이너는 프로토타입 빈의 생성과 의존관계 주입까지만 관여하고    
-                 더는 관리하지 않는 매우 짧은 범위의 스코프이다.     
-* **request:** 웹 요청이 들어오고 나갈때 까지 유지되는 스코프이다.    
-* **session:** 웹 세션이 생성되고 종료될 때 까지 유지되는 스코프이다.    
-* **application:** 웹의 서블릿 컨텍스와 같은 범위로 유지되는 스코프이다.    
+* **Singletone:**    
+    기본 스코프, 스프링 컨테이너의 시작과 종료까지 유지되는 가장 넓은 범위의 스코프이다.      
+* **prototype:**   
+    스프링 컨테이너는 프로토타입 빈의 생성과 의존관계 주입까지만 관여하고    
+    더는 관리하지 않는 매우 짧은 범위의 스코프이다.     
+* **request:** 
+    웹 요청이 들어오고 나갈때 까지 유지되는 스코프이다.    
+* **session:**
+    웹 세션이 생성되고 종료될 때 까지 유지되는 스코프이다.    
+* **application:**
+    웹의 서블릿 컨텍스와 같은 범위로 유지되는 스코프이다.    
              
 빈 스코프는 **`@Scope`을 통해 설정할 수 있으며 `@Bean`또는`@Component`등과 함께 사용한다.**      
    
