Update 05 빈 스코프.md

--- a/01 IoC 컨테이너/05 빈 스코프.md
+++ b/01 IoC 컨테이너/05 빈 스코프.md
@@ -1,10 +1,9 @@
 빈 스코프
-=====================
-
-# 빈 스코프란?  
+=====================  
+# 📗 빈 스코프란?  
 **스프링 빈 스코프의 기본 전략은 `싱글톤`이다.**     
-하지만 이외에도 다양한 전략들이 있으니 이를 알아보자.   
-   
+하지만 이외에도 다양한 전략들도 존재한다.      
+     
 **스프링 빈 스코프**     
 * **Singletone:**    
     기본 스코프, 스프링 컨테이너의 시작과 종료까지 유지되는 가장 넓은 범위의 스코프이다.      
@@ -36,15 +35,14 @@ PrototypeBean HelloBean() {
 }
 ```
 
-# 프로토타입 스코프    
-빈을 요청할 때마다, 매번 같은 빈과 의존 관계 주입을 맺는 싱글톤 스코프와 달리,        
-프로토타입 스코프는 빈을 요청할 때마다 매번 새롭게 생성된 빈과 의존 관계 주입을 맺는다.    
-           
+## 📖 프로토타입 스코프    
+`프로토타입 스코프`는 **빈을 요청할 때마다 매번 새롭게 빈을 생성하는 전략이다.**                
+                  
 더 상세하게 설명하자면,               
-프로토타입 스코프의 빈은 **빈 생성 과정 및 사용**까지는 싱글톤 빈과 동일하기에             
 **빈 생성 -> 의존 관계 주입 -> 초기화** 단계 까지는 동일하게 적용되나               
-이후 부터는 스프링에서 빈을 관리하지 않는다는 전략을 가지고 있다.                
-그리고 미리 생성되는 것이 아니라 빈을 요청할 때 생성한다는 특징도 가지고 있다.         
+이후 부터는 스프링에서 빈을 관리하지 않는다는 전략을 가지고 있다.   
+   
+그리고 미리 생성된 것이 아니라 요청할 때마다 빈을 생성한다.(지연 생성)            
          
 즉, 초기화 이후에는 스프링 컨테이너에서 빈을 관리하지 않기 때문에       
 클라이언트에서 빈을 관리해야한다는 책임을 넘겨받게 된다.      
