Update 05 빈 스코프.md

--- a/01 IoC 컨테이너/05 빈 스코프.md
+++ b/01 IoC 컨테이너/05 빈 스코프.md
@@ -37,95 +37,26 @@ PrototypeBean HelloBean() {
 
 ## 📖 프로토타입 스코프    
 `프로토타입 스코프`는 **빈을 요청할 때마다 매번 새롭게 빈을 생성하는 전략이다.**                
-                  
-더 상세하게 설명하자면,               
-**빈 생성 -> 의존 관계 주입 -> 초기화** 단계 까지는 동일하게 적용되나               
-이후 부터는 스프링에서 빈을 관리하지 않는다는 전략을 가지고 있다.   
-   
-그리고 미리 생성된 것이 아니라 요청할 때마다 빈을 생성한다.(지연 생성)            
-         
-즉, 초기화 이후에는 스프링 컨테이너에서 빈을 관리하지 않기 때문에       
-클라이언트에서 빈을 관리해야한다는 책임을 넘겨받게 된다.      
-그리고 이로인해 `PreDestroy` 같은 종료 메서드가 호출되지도 않는다.           
-      
-**SingletonTest**   
-```java
-package hello.core.scope;
+                    
+프로토타입 빈은 스프링 컨테이너가 생성과 의존관계 주입 그리고 초기화 까지만 관여하고, 더는 관리하지 않는다.        
+즉, 스프링에서 **빈 생성 -> 의존 관계 주입 -> 초기화** 단계 까지만 관리하고 이후부터는 관리하지 않는다.                    
+따라서 프로토타입 빈은 **스프링 컨테이너가 종료될 때 @PreDestory 같은 종료 메서드가 전혀 실행되지 않는다.**      
 
-import org.junit.jupiter.api.Test;
-import org.springframework.context.annotation.AnnotationConfigApplicationContext;
-import org.springframework.context.annotation.Scope;
+이로인해 프로토 타입은 요청할 때마다 빈을 생성한다.(지연 생성)                       \   
+빈을 미리 생성된 것이 아니라 
 
-import javax.annotation.PostConstruct;
-import javax.annotation.PreDestroy;
-
-import static org.assertj.core.api.Assertions.assertThat;
-
-public class SingletonTest {
-
-    @Test
-    void singletonBeanFind() {
-        AnnotationConfigApplicationContext ac = new AnnotationConfigApplicationContext(SingletonBean.class);
-
-        SingletonBean singletonBean1 = ac.getBean(SingletonBean.class);
-        SingletonBean singletonBean2 = ac.getBean(SingletonBean.class);
-
-        System.out.println("singletonBean1 = " + singletonBean1);
-        System.out.println("singletonBean2 = " + singletonBean2);
-
-        assertThat(singletonBean1).isSameAs(singletonBean2);
-
-        ac.close();
-    }
-
-
-    @Scope(scopeName = "singleton")
-    static class SingletonBean {
-
-        @PostConstruct
-        public void init() {
-            System.out.println("SingletonBean.init");
-        }
-
-        @PreDestroy
-        public void destroy() {
-            System.out.println("SingletonBean.destroy");
-        }
-
-    }
-}
-```
-   
 **PrototypeTest**
 ```java
-package hello.core.scope;
-
-import org.junit.jupiter.api.Test;
-import org.springframework.context.annotation.AnnotationConfigApplicationContext;
-import org.springframework.context.annotation.Scope;
-
-import javax.annotation.PostConstruct;
-import javax.annotation.PreDestroy;
-
-import static org.assertj.core.api.Assertions.assertThat;
-
 public class PrototypeTest {
 
     @Test
     void prototypeBeanFind() {
         AnnotationConfigApplicationContext ac = new AnnotationConfigApplicationContext(PrototypeBean.class);
 
-        System.out.println("find prototypeBean1, bean is create at this request time");
         PrototypeBean prototypeBean1 = ac.getBean(PrototypeBean.class);
-
-        System.out.println("find prototypeBean2, bean is create at this request time");
         PrototypeBean prototypeBean2 = ac.getBean(PrototypeBean.class);
-
-        System.out.println("singletonBean1 = " + prototypeBean1);
-        System.out.println("singletonBean2 = " + prototypeBean2);
-
-        assertThat(prototypeBean1).isNotSameAs(prototypeBean2);
-
+        assertThat(prototypeBean1).isNotSameAs(prototypeBean2); // 주소값 비교 -> 테스트 실패가 된다.  
+        
         ac.close();
     }
 
@@ -147,13 +78,9 @@ public class PrototypeTest {
 }
 ```
       
-싱글톤 빈은 스프링 컨테이너 생성 시점에 초기화 메서드가 실행 되지만,         
 **프로토타입 스코프의 빈은 스프링 컨테이너에서 빈을 조회할 때 생성되고, 초기화 메서드도 실행된다.**           
 프로토타입 빈을 2번 조회했으므로 완전히 다른 스프링 빈이 생성되고, 초기화도 2번 실행된 것을 확인할 수 있다.    
          
-싱글톤 빈은 스프링 컨테이너가 관리하기 때문에 스프링 컨테이너가 종료될 때 빈의 종료 메서드가 실행되지만,      
-프로토타입 빈은 스프링 컨테이너가 생성과 의존관계 주입 그리고 초기화 까지만 관여하고, 더는 관리하지 않는다.       
-따라서 프로토타입 빈은 스프링 컨테이너가 종료될 때 @PreDestory 같은 종료 메서드가 전혀 실행되지 않는다.    
          
 **프로토타입 빈의 특징 정리**      
 * 스프링 컨테이너에 요청할 때 마다 새로 생성된다.   
