--- a/01 IoC 컨테이너/05 빈 스코프.md
+++ b/01 IoC 컨테이너/05 빈 스코프.md
@@ -37,14 +37,11 @@ PrototypeBean HelloBean() {
 
 ## 📖 프로토타입 스코프    
 `프로토타입 스코프`는 **빈을 요청할 때마다 매번 새롭게 빈을 생성하는 전략이다.**                
-                    
-프로토타입 빈은 스프링 컨테이너가 생성과 의존관계 주입 그리고 초기화 까지만 관여하고, 더는 관리하지 않는다.        
-즉, 스프링에서 **빈 생성 -> 의존 관계 주입 -> 초기화** 단계 까지만 관리하고 이후부터는 관리하지 않는다.                    
-따라서 프로토타입 빈은 **스프링 컨테이너가 종료될 때 @PreDestory 같은 종료 메서드가 전혀 실행되지 않는다.**      
-
-이로인해 프로토 타입은 요청할 때마다 빈을 생성한다.(지연 생성)                       \   
-빈을 미리 생성된 것이 아니라 
-
+                       
+또한, 프로토타입 빈은 스프링 컨테이너가 **생성**과 **의존관계 주입** 그리고 **초기화** 까지만 관여하고, 더는 관리하지 않는다.          
+즉, 스프링에서 **빈 생성 -> 의존 관계 주입 -> 초기화** 단계 까지만 관리하고 이후부터는 관리하지 않는다.                      
+따라서 프로토타입 빈은 **스프링 컨테이너가 종료될 때 @PreDestory 같은 종료 메서드가 전혀 실행되지 않는다.**         
+   
 **PrototypeTest**
 ```java
 public class PrototypeTest {
@@ -81,7 +78,6 @@ public class PrototypeTest {
 **프로토타입 스코프의 빈은 스프링 컨테이너에서 빈을 조회할 때 생성되고, 초기화 메서드도 실행된다.**           
 프로토타입 빈을 2번 조회했으므로 완전히 다른 스프링 빈이 생성되고, 초기화도 2번 실행된 것을 확인할 수 있다.    
          
-         
 **프로토타입 빈의 특징 정리**      
 * 스프링 컨테이너에 요청할 때 마다 새로 생성된다.   
 * 스프링 컨테이너는 프로토타입 빈의 생성과 의존관계 주입 그리고 초기화까지만 관여한다.    
@@ -94,121 +90,6 @@ public class PrototypeTest {
 하지만, **`싱글톤 스코프 빈`내에 `프로토타입 스코프 빈`이 존재한다면 어떻게 될까? 🤔**                  
 우리가 원하는대로 싱글턴은 싱글턴대로, 프로토타입은 프로토타입 빈대로 실행이 될까?      
    
-**SingletonWithPrototypeTest1**
-```java
-package hello.core.scope;
-
-import org.junit.jupiter.api.Test;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.context.annotation.AnnotationConfigApplicationContext;
-import org.springframework.context.annotation.Scope;
-
-import javax.annotation.PostConstruct;
-import javax.annotation.PreDestroy;
-
-import static org.assertj.core.api.Assertions.assertThat;
-
-public class SingletonWithPrototypeTest1 {
-
-    @Test
-    void prototypeFind() {
-        AnnotationConfigApplicationContext ac = new AnnotationConfigApplicationContext(PrototypeBean.class);
-
-        PrototypeBean prototypeBean1 = ac.getBean(PrototypeBean.class);
-        prototypeBean1.addCount();
-        assertThat(prototypeBean1.getCount()).isEqualTo(1);
-
-        PrototypeBean prototypeBean2 = ac.getBean(PrototypeBean.class);
-        prototypeBean2.addCount();
-        assertThat(prototypeBean2.getCount()).isEqualTo(1);
-    }
-
-    @Test
-    void singletonClientUsePrototype() {
-        AnnotationConfigApplicationContext ac = new AnnotationConfigApplicationContext(ClientBean.class, PrototypeBean.class);
-
-        ClientBean clientBean1 = ac.getBean(ClientBean.class);
-        ClientBean clientBean2 = ac.getBean(ClientBean.class);
-
-        assertThat(clientBean1.logic()).isEqualTo(1);
-        assertThat(clientBean2.logic()).isEqualTo(2);
-
-    }
-
-
-    @Scope("singleton")
-    static class ClientBean {
-        private final PrototypeBean prototypeBean;
-
-        @Autowired
-        public ClientBean(PrototypeBean prototypeBean) {
-            this.prototypeBean = prototypeBean;
-        }
-
-        public int logic() {
-            prototypeBean.addCount();
-            return prototypeBean.getCount();
-        }
-
-    }
-
-    @Scope("prototype")
-    static class PrototypeBean {
-        private int count = 0;
-
-        public void addCount() {
-            count++;
-        }
-
-        public int getCount() {
-            return count;
-        }
-
-        @PostConstruct
-        public void init() {
-            System.out.println("PrototypeBean.init " + this);
-        }
-
-        @PreDestroy
-        public void destroy() {
-            System.out.println("PrototypeBean.destroy");
-        }
-    }
-}
-```
-```java
-    @Test
-    void singletonClientUsePrototype() {
-        AnnotationConfigApplicationContext ac = new AnnotationConfigApplicationContext(ClientBean.class, PrototypeBean.class);
-
-        ClientBean clientBean1 = ac.getBean(ClientBean.class);
-        ClientBean clientBean2 = ac.getBean(ClientBean.class);
-
-        assertThat(clientBean1.logic()).isEqualTo(1);
-        assertThat(clientBean2.logic()).isEqualTo(2);
-
-    }
-```
-위 코드의 내부 동작에 대해서 설명해보자면 `ClientBean` 빈을 만들면서   
-`프로토타입 빈`인 `PrototypeBean`을 의존 관계 주입을 받는다.    
-
-```java
-    @Scope("singleton")
-    static class ClientBean {
-        private final PrototypeBean prototypeBean;
-
-        @Autowired
-        public ClientBean(PrototypeBean prototypeBean) {
-            this.prototypeBean = prototypeBean;
-        }
-
-        public int logic() {
-            prototypeBean.addCount();
-            return prototypeBean.getCount();
-        }
-
-    }
-```    
 하지만, `ClientBean`은 생성과 동시에 `의존 관계 주입`을 진행하고 있다.     
 그렇기에 `프로토타입 빈`이라도, 결과적으로 반환되는 `ClientBean`은 이미 생성된 싱글톤이므로    
 프로토타입으로 동작하지 않고, 마치 싱글톤처럼 동작을 하는 빈이 되어버린다.     
