--- a/01 IoC 컨테이너/05 빈 스코프.md
+++ b/01 IoC 컨테이너/05 빈 스코프.md
@@ -84,40 +84,18 @@ public class PrototypeTest {
 * 종료 메서드가 호출되지 않는다.    
 * 그래서 프로토타입 빈은 프로토타입 빈을 조회한 클라이언트가 관리해야 한다.      
 * 종료 메서드에 대한 호출도 클라이언트가 직접 해야한다.    
-  
-# 프로토타입과 싱글톤 빈과 함께 사용시 문제점     
-프토토타입 스코프의 빈을 요청하면 스프링 컨테이너는 항상 새로운 객체 인스턴스를 생성해서 반환한다.               
-하지만, **`싱글톤 스코프 빈`내에 `프로토타입 스코프 빈`이 존재한다면 어떻게 될까? 🤔**                  
-우리가 원하는대로 싱글턴은 싱글턴대로, 프로토타입은 프로토타입 빈대로 실행이 될까?      
-   
-하지만, `ClientBean`은 생성과 동시에 `의존 관계 주입`을 진행하고 있다.     
-그렇기에 `프로토타입 빈`이라도, 결과적으로 반환되는 `ClientBean`은 이미 생성된 싱글톤이므로    
-프로토타입으로 동작하지 않고, 마치 싱글톤처럼 동작을 하는 빈이 되어버린다.     
-
-```java
-
-    @Scope("singleton")
-    static class ClientBean {
-        private PrototypeBean prototypeBean;
-
-
-        @Autowired
-        public void setPrototypeBean(PrototypeBean prototypeBean) {
-            this.prototypeBean = prototypeBean;
-        }
-
-        public int logic() {
-            prototypeBean.addCount();
-            return prototypeBean.getCount();
-        }
-
-    }
-```
-**참고로,** 생성자 주입을 받는 코드를 Setter 주입으로 바꾸어도 결과는 마찬가지이다.   
-     
+      
+### 📄 프로토타입과 싱글톤 빈과 함께 사용시 문제점        
+`프로토 타입 스코프 빈`내에 `싱글톤 스코프 빈`이 존재한다면 당연히, 매번 생성되어도 싱글톤이 주입될 것이다.   
+그렇다면, **`싱글톤 스코프 빈`내에 `프로토타입 스코프 빈`이 존재한다면 어떻게 될까? 🤔**                 
+      
+정답은, 내부가 `프로토타입 빈`이라도, 결과적으로 반환되는 외부 클래스는 이미 생성된 싱글톤이므로        
+**프로토타입으로 동작하지 않고, `마치 싱글톤처럼` 동작을 하는 빈이 되어버린다.**          
+(생성자 주입을 받는 코드를 Setter 주입으로 바꾸어도 결과는 마찬가지이다.)     
+          
 그리고 위에서 `마치 싱글톤처럼 동작`을 한다고 이야기를 했다.   
 이 부분에 대해서 조금 설명해보기 위해, `PrototypeBean`을 의존 관계 주입받는 객체가 하나 더 있다 가정한다.   
-
+   
 ```java
     @Test
     void singletonClientUsePrototype() {
@@ -128,7 +106,6 @@ public class PrototypeTest {
 
         assertThat(clientBean1.logic()).isEqualTo(1);
         assertThat(clientBean2.logic()).isEqualTo(1);
-
     }
 
 
@@ -170,14 +147,14 @@ public class PrototypeTest {
 PrototypeBean.init hello.core.scope.SingletonWithPrototypeTest1$PrototypeBean@11fc564b   
 PrototypeBean.init hello.core.scope.SingletonWithPrototypeTest1$PrototypeBean@3f56875e  
 ```  
-이 같은 경우는 두 빈 모두 싱글턴이지만,           
-주입되는 빈은 프로토타입 빈이므로 각각의 의존 관계 주입에 새로운 객체로 생성되어 주입한다.         
-     
-# Dependecy Lookup을 위한 Provider          
-싱글톤 빈과 프로토타입 빈을 함께 사용할 때,          
-어떻게 하면 사용할 때 마다 항상 새로운 프로토타입 빈을 생성할 수 있을까?        
-         
-
+두 클래스는 서로다른 클래스이지만 내부 로직은 같다.    
+두 클래스의 경우는 두 빈 모두 싱글턴이지만,               
+주입되는 빈은 프로토타입 빈이므로 각각의 의존 관계 주입에 새로운 객체로 생성되어 주입한다.           
+        
+### 📄 Dependecy Lookup을 위한 Provider          
+싱글톤 빈과 프로토타입 빈을 함께 사용할 때,            
+**어떻게 하면 사용할 때 마다 항상 새로운 프로토타입 빈을 생성할 수 있을까? 🤔**         
+          
 ```java
  static class ClientBean {
      @Autowired
@@ -191,11 +168,9 @@ PrototypeBean.init hello.core.scope.SingletonWithPrototypeTest1$PrototypeBean@3f
      }
  }
 ```  
-가장 간단한 방법으로는 `스프링 컨테이너 빈`을 의존 관계 주입받아          
-`스프링 컨테이너 빈`의 `getBean()`을 활용하여 직접 프로토타입 빈을 꺼내오면 된다.           
-        
-이렇듯, 의존 관계를 외부에서 주입(DI) 받는게 아니라      
-**직접 필요한 의존 관계를 찾는 것을 Dependency Lookup (DL) 의존관계 조회(탐색)** 이라 한다.       
+가장 간단한 방법으로는 `스프링 컨테이너 빈`을 의존 관계 주입받아            
+`스프링 컨테이너 빈`의 `getBean()`을 활용하여 직접 프로토타입 빈을 꺼내오면 된다.              
+이렇듯, **직접 필요한 의존 관계를 찾는 것을 Dependency Lookup (DL) 의존관계 조회(탐색)** 이라 한다.       
              
 그런데 이렇게 스프링의 애플리케이션 컨텍스트 전체를 주입받게 되면,        
 `스프링 컨테이너`에 종속적인 코드가 되고, 단위 테스트도 어려워진다.       
