--- a/01 IoC 컨테이너/05 빈 스코프.md
+++ b/01 IoC 컨테이너/05 빈 스코프.md
@@ -174,7 +174,7 @@ PrototypeBean.init hello.core.scope.SingletonWithPrototypeTest1$PrototypeBean@3f
 그런데 `ApplicationContext` 전체를 주입받게 되면, 너무 많은 기능을 준비하고 단위 테스트도 어려워진다.       
 이럴때는 `DL` 기능만 수행해주는 `Provider` 클래스를 이용하면된다.   
         
-## 📖 프로토타입 빈을 언제 사용할까?🤔**        
+## 📖 프로토타입 빈을 언제 사용할까?🤔        
 사실, 대부분 싱글톤으로 해결이 가능하기에 **프로토타입 빈을 직접적으로 사용하는 일은 매우 드물다.**            
 특정 케이스로, 순환 참조 관계가 발생했을 때(A가 B를 참조해도 B가 A를 나중에 참조할 때)사용하지만                
 이전에 언급했듯이 이럴경우 차라리 설계를 다시한다.    
