Update 05 빈 스코프.md

--- a/01 IoC 컨테이너/05 빈 스코프.md
+++ b/01 IoC 컨테이너/05 빈 스코프.md
@@ -146,10 +146,9 @@ public class PrototypeTest {
 PrototypeBean.init hello.core.scope.SingletonWithPrototypeTest1$PrototypeBean@11fc564b   
 PrototypeBean.init hello.core.scope.SingletonWithPrototypeTest1$PrototypeBean@3f56875e  
 ```  
-두 클래스는 서로다른 클래스이지만 내부 로직은 같다.    
-두 클래스의 경우는 두 빈 모두 싱글턴이지만,               
-주입되는 빈은 프로토타입 빈이므로 각각의 의존 관계 주입에 새로운 객체로 생성되어 주입한다.           
-        
+두 클래스는 서로 다른 클래스이지만 내부 로직은 같으며 둘다 싱글톤이다.       
+단, `주입되는 빈은 프로토타입 빈`이므로 각각의 의존 관계 주입에 **새로운 객체로 생성되어 주입된다.**               
+          
 ## 📖 Dependecy Lookup을 위한 Provider          
 싱글톤 빈과 프로토타입 빈을 함께 사용할 때,            
 **어떻게 하면 사용할 때 마다 항상 새로운 프로토타입 빈을 생성할 수 있을까? 🤔**         
