Update 05 빈 스코프.md

--- a/01 IoC 컨테이너/05 빈 스코프.md
+++ b/01 IoC 컨테이너/05 빈 스코프.md
@@ -83,7 +83,12 @@ public class PrototypeTest {
 * 종료 메서드가 호출되지 않는다.    
 * 그래서 프로토타입 빈은 프로토타입 빈을 조회한 클라이언트가 관리해야 한다.      
 * 종료 메서드에 대한 호출도 클라이언트가 직접 해야한다.    
-      
+   
+## 📖 프로토타입 빈을 언제 사용할까?🤔        
+사실, 대부분 싱글톤으로 해결이 가능하기에 **프로토타입 빈을 직접적으로 사용하는 일은 매우 드물다.**            
+특정 케이스로, 순환 참조 관계가 발생했을 때(A가 B를 참조해도 B가 A를 나중에 참조할 때)사용하지만                
+이전에 언급했듯이 이럴 경우 차라리 설계를 다시한다.    
+   
 ## 📖 프로토타입과 싱글톤 빈과 함께 사용시 문제점        
 `프로토 타입 스코프 빈`내에 `싱글톤 스코프 빈`이 존재한다면 당연히, 매번 생성되어도 싱글톤이 주입될 것이다.   
 그렇다면, **`싱글톤 스코프 빈`내에 `프로토타입 스코프 빈`이 존재한다면 어떻게 될까? 🤔**                 
@@ -173,10 +178,66 @@ PrototypeBean.init hello.core.scope.SingletonWithPrototypeTest1$PrototypeBean@3f
 그런데 `ApplicationContext` 전체를 주입받게 되면, 너무 많은 기능을 준비하고 단위 테스트도 어려워진다.       
 이럴때는 `DL` 기능만 수행해주는 `Provider` 클래스를 이용하면된다.   
         
-## 📖 프로토타입 빈을 언제 사용할까?🤔        
-사실, 대부분 싱글톤으로 해결이 가능하기에 **프로토타입 빈을 직접적으로 사용하는 일은 매우 드물다.**            
-특정 케이스로, 순환 참조 관계가 발생했을 때(A가 B를 참조해도 B가 A를 나중에 참조할 때)사용하지만                
-이전에 언급했듯이 이럴경우 차라리 설계를 다시한다.    
+### 📄 ObjectProvider(구버전 :ObjectFactory)   
+스프링 컨테이너에서 특정한 빈을 찾아올 수 있는 `ObjectProvider`빈이 존재한다.     
+  
+```java
+    @Autowired
+    private ObjectProvider<PrototypeBean> prototypeBeanProvider;
+
+    public int logic() {
+        PrototypeBean prototypeBean = prototypeBeanProvider.getObject();
+        prototypeBean.addCount();
+        int count = prototypeBean.getCount();
+        return count;
+    }
+```     
+참고로, `ObjectProvider`이전에 `ObjectFactory`도 존재했고 사용법은 같다.  
+
+**특징**   
+* **ObjectProvider :** ObjectFactory 상속, 옵션, 스트림 처리등 편의 기능이 많고, 별도의 라이브러리 필요없음, 스프링에 의존      
+* **ObjectFactory :** 기능이 단순, 별도의 라이브러리 필요 없음, 스프링에 의존        
+
+### 📄 ## JSR-330 Provider    
+`javax.inject.Provider` 라는 `JSR-330` **자바 표준**을 사용하는 방법이다.           
+단, `javax.inject:javax.inject:1` 라이브러리를 `gradle`에 추가 해야한다.                 
+  
+```java
+    @Scope("singleton")
+    static class ClientBean {
+
+        private final Provider<PrototypeBean> objectProvider;
+
+        @Autowired
+        public ClientBean(Provider<PrototypeBean> objectProvider) {
+            this.objectProvider = objectProvider;
+        }
+
+        public int logic() {
+            PrototypeBean prototypeBean = objectProvider.get();
+            prototypeBean.addCount();
+            return prototypeBean.getCount();
+        }
+
+    }
+```
+**자바 표준**이고, 기능이 단순하므로 단위테스트를 만들거나 mock 코드를 만들기는 훨씬 쉽다.   
+`Provider`는 `DL` 정도의 기능만 제공한다.            
+            
+**그렇다면 왜? `javax.inject.Provider`가 표준이고 왜 사용할까? 🤔**        
+스프링의 `ObjectProvider`도 존재했지만 스프링에 의존적이라는 장점이자 단점을 가지고 있다.   
+스프링에 의존된 코드들은 스프링 환경에 잘 어울리는 최적의 기능들을 제공하지만    
+다른 프레임워크에서나 일반 Java 환경에서는 사용할 수 없다는 특징이 있다.(스프링에 의존적, 테스트 안됨)            
+하지만, `javax.inject.Provider`는 `javax`에 정의된 자바 표준이기에       
+스프링이 아닌 다른 프레임워크의 컨테이너의 `DL`을 지원할 수 있다는 장점이 있다.  
+         
+**특징**     
+* `get()` 메서드 하나로 기능이 매우 단순하다.       
+* 별도의 라이브러리를 빌드를 해야한다.        
+* 자바 표준이므로 스프링이 아닌 다른 컨테이너에서도 사용할 수 있다.      
+
+### 📄 @Scope의 scoped-proxy 이용하기    
+
                  
 # 📘 웹 스코프
 ```java
