--- a/01 IoC 컨테이너/05 빈 스코프.md
+++ b/01 IoC 컨테이너/05 빈 스코프.md
@@ -198,7 +198,7 @@ PrototypeBean.init hello.core.scope.SingletonWithPrototypeTest1$PrototypeBean@3f
 * **ObjectProvider :** ObjectFactory 상속, 옵션, 스트림 처리등 편의 기능이 많고, 별도의 라이브러리 필요없음, 스프링에 의존      
 * **ObjectFactory :** 기능이 단순, 별도의 라이브러리 필요 없음, 스프링에 의존        
 
-### 📄 ## JSR-330 Provider    
+### 📄 JSR-330 Provider    
 `javax.inject.Provider` 라는 `JSR-330` **자바 표준**을 사용하는 방법이다.           
 단, `javax.inject:javax.inject:1` 라이브러리를 `gradle`에 추가 해야한다.                 
   
@@ -237,6 +237,12 @@ PrototypeBean.init hello.core.scope.SingletonWithPrototypeTest1$PrototypeBean@3f
 * 자바 표준이므로 스프링이 아닌 다른 컨테이너에서도 사용할 수 있다.      
 
 ### 📄 @Scope의 scoped-proxy 이용하기    
+```java
+@Scope("singleton")
+
+```
+
+
 
                  
 # 📘 웹 스코프
