Update 05 빈 스코프.md

--- a/01 IoC 컨테이너/05 빈 스코프.md
+++ b/01 IoC 컨테이너/05 빈 스코프.md
@@ -232,7 +232,7 @@ PrototypeBean.init hello.core.scope.SingletonWithPrototypeTest1$PrototypeBean@3f
 
 ### 📄 @Scope의 scoped-proxy 이용하기    
 ```java
-@Scope("singleton")
+@Scope(value = "prototype", )
 
 ```
 
@@ -241,10 +241,10 @@ PrototypeBean.init hello.core.scope.SingletonWithPrototypeTest1$PrototypeBean@3f
                  
 # 📘 웹 스코프
 ```java
-@Scope(value = "스코프")
-```   
-웹 스코프는 **빈 스코프 중에서 웹 환경에서만 동작을 한다.(안드로이드, 다른 서버 불가)**        
-그렇기에 프로토타입과는 다르게 스프링이 해당 스코프의 종료 시점까지 관리한다는 특징이 있다.      
+@Scope(value = "스코프") // 동일하게 @Scope를 쓴다.    
+```    
+웹 스코프는 **빈 스코프 중에서 웹 환경에서만 동작을 한다.(안드로이드, 다른 서버 불가)**     
+그렇기에 **싱글톤은 아니지만, `프로토타입`과는 다르게 스프링이 해당 스코프의 종료 시점까지 관리한다는 특징이 있다.**         
         
 **웹 스코프 종류**     
 * **request:** HTTP 요청 하나가 들어오고 나갈 때까지 유지되며, HTTP 요청마다 별도의 빈 인스턴스가 생성되고 관리된다.   
