Update 05 빈 스코프.md

--- a/01 IoC 컨테이너/05 빈 스코프.md
+++ b/01 IoC 컨테이너/05 빈 스코프.md
@@ -232,11 +232,65 @@ PrototypeBean.init hello.core.scope.SingletonWithPrototypeTest1$PrototypeBean@3f
 
 ### 📄 @Scope의 scoped-proxy 이용하기    
 ```java
-@Scope(value = "prototype", )
+@Scope("singleton")
+public class ClientBean {
+    private PrototypeBean prototypeBean;
 
+    @Autowired
+    public void setPrototypeBean(PrototypeBean prototypeBean) {
+        this.prototypeBean = prototypeBean;
+    }
+ 
+    public int logic() {
+        prototypeBean.addCount();
+        return prototypeBean.getCount();
+    }
+
+}
+```    
+```java
+@Scope(value = "prototype", proxyMode = ScopedProxyMode.TARGET_CLASS)
+public class PrototypeBean {    
+}
+```
+`@Scope` 속성중 `proxyMode` 에 `NO`나 `DEFAULT`가 아닌 알맞는 값을 넣으면 프록시가 활성화된다.     
+
+* INTERFACES : 인터페이스를 기반으로 구현한 프록시를 만든다.
+* TARGET_CLASS : 클래스를 기반으로 상속한 프록시를 만든다.   
+
+`인터페이스 구현/클래스 상속`한 것이 프록시 객체이므로 다형성이 성립된다.   
+
+```java
+    상위 클래스 = new 프록시 객체();
 ```
 
+**그렇다면 프록시는 대체 무엇이지? 🤔**    
+프록시란, **실제 객체를 감싼 가짜 객체로** 실제 객체를 기반으로 구현 또는 상속된 형태이다.   
+![image](https://user-images.githubusercontent.com/50267433/124465643-9bb1f800-ddd0-11eb-82b5-122b22b77b9c.png)      
 
+프록시는 실제 객체가 아닌 가짜 객체로   
+메서드를 실행하면 비로소, 실제 객체를 불러와 실행을 시킨다.   
+
+```java
+proxy.method();
+--------------------------
+public class Proxy enxtends Prototype {
+    
+    ProtoType prototype;
+    ApplicationContext context;
+    
+    @Override
+    public void method {
+        if(prototype == null) {
+            prototype = context.getBean("Prototype");
+        }
+        prototype.method();
+    }
+}
+```
+`context.getBean("Prototype");`이러한 동작으로 인해,       
+싱글톤일 경우 항상 동일한 빈을 반환하지만        
+프로토타입 일 경우 매번 새로운 빈을 반환하는 것이다.     
 
                  
 # 📘 웹 스코프
