--- a/01 IoC 컨테이너/06 프로퍼티.md
+++ b/01 IoC 컨테이너/06 프로퍼티.md
@@ -1,5 +1,18 @@
 프로퍼티     
-==============      
+==============       
+`Spring`에서 `properties`에 대한 설정은 애플리케이션 개발에 있어 가장 기본적이면서 중요한 작업이다.            
+특히 `Spring boot` 에서는 `autoConfiguration` 과 관련하여 빈 설정을 쉽게 할 수 있다는 장점이 있다.            
+그렇기에 프로퍼티에 대해서 제대로 정리를 해보고 이를 통해 알맞게 프로퍼티를 사용하고자 한다.      
+
+
+
+
+
+
+스프링에서 프로퍼티에 대한 설정은 매우 중요하다.
+
+
+
       
 프로퍼티**   
 * 다양한 방법으로 정의할 수 있는 설정값
@@ -17,6 +30,12 @@
 ```java
 @PropertySource
 ```
+   
+# @PropertySource    
+   
+`@PropertySource`을 이용하면 **properties 파일을 불러오고 사용할 수 있다.**     
+
+
 ● Environment를 통해 프로퍼티 추가하는 방법
 스프링 부트의 외부 설정 참고
 ● 기본 프로퍼티 소스 지원 (application.properties)
