--- a/01 IoC 컨테이너/06 프로퍼티.md
+++ b/01 IoC 컨테이너/06 프로퍼티.md
@@ -1,13 +1,12 @@
 프로퍼티     
 ==============       
-`Spring`에서 `properties`에 대한 설정은 애플리케이션 개발에 있어 가장 기본적이면서 중요한 작업이다.            
-특히 `Spring boot` 에서는 `autoConfiguration` 과 관련하여 빈 설정을 쉽게 할 수 있다는 장점이 있다.            
-그렇기에 프로퍼티에 대해서 제대로 정리를 해보고 이를 통해 알맞게 프로퍼티를 사용하고자 한다.      
+`Spring`에서 `properties`에 대한 설정은 애플리케이션 개발에 있어 가장 기본적이면서 중요한 작업이다.               
+특히 `Spring boot` 에서는 `autoConfiguration` 과 관련하여 빈 설정을 쉽게 할 수 있다는 장점이 있다.                          
+그렇기에 프로퍼티에 대해서 제대로 정리를 해보고 이를 통해 알맞게 프로퍼티를 사용하는 능력을 기르고자 한다.                     
+         
+# @Value  
 
-
-
-
-
+  
 
 스프링에서 프로퍼티에 대한 설정은 매우 중요하다.
 
