--- a/01 IoC 컨테이너/06 프로퍼티.md
+++ b/01 IoC 컨테이너/06 프로퍼티.md
@@ -4,7 +4,7 @@
 특히 `Spring boot` 에서는 `autoConfiguration` 과 관련하여 빈 설정을 쉽게 할 수 있다는 장점이 있다.                          
 그렇기에 프로퍼티에 대해서 제대로 정리를 해보고 이를 통해 알맞게 프로퍼티를 사용하는 능력을 기르고자 한다.                     
             
-# 환경 프로퍼티 파일 설정하기   
+# 환경 프로퍼티 파일   
 `Spring boot` 프로퍼티 파일은 **설정 관련 및 기타 정적인 값을 `키/값` 형식으로 관리한다.**           
 이 파일을 사용하면 **기존 스프링 프레임워크의 복잡한 XML 설정을 파일 하나로 대체할 수 있다.**           
              
