--- a/01 IoC 컨테이너/06 프로퍼티.md
+++ b/01 IoC 컨테이너/06 프로퍼티.md
@@ -26,8 +26,9 @@ yaml을 설정하려면 `SnakeYAML 라이브러리`를 포함해야 하지만 `s
 * `application.properties` 와 `application.yml`이 동시에 존재하면 `.yml` 파일이 실행된다.   
    
 ## 프로파일에 따른 환경 구성 분리   
-실제 서비스에서는 로컬 DB, 개발 DB, 운영 DB의 설정값이 모두 다릅니다.   
-이런 경우를 대비해 프로파일에 따라 프로퍼티를 다르게 설정해야 합니다.   
+실제 서비스는 **`테스트`, `로컬`, `개발`, `운영`의 설정을 나누는 경우가 많다.**           
+이러한 개발 환경을 나누기 위해 **`profile 설정` 및 `profile 별로 프로퍼티 파일`을 작성한다.**          
+
    
 **YAML** 파일에서 프로퍼티 설정을 구분하는 방법은 간단합니다.   
 다음과 같이 ```---``` 을 기준으로 설정값을 나눕니다.   
