--- a/01 IoC 컨테이너/06 프로퍼티.md
+++ b/01 IoC 컨테이너/06 프로퍼티.md
@@ -5,121 +5,50 @@
 그렇기에 프로퍼티에 대해서 제대로 정리를 해보고 이를 통해 알맞게 프로퍼티를 사용하는 능력을 기르고자 한다.                     
             
 # 환경 프로퍼티 파일   
-`Spring boot` 프로퍼티 파일은 **설정 관련 및 기타 정적인 값을 `키/값` 형식으로 관리한다.**           
+`Spring boot` 프로퍼티 파일은 **설정 관련 및 기타 정적인 값을 `key/value` 형식으로 관리한다.**           
 이 파일을 사용하면 **기존 스프링 프레임워크의 복잡한 XML 설정을 파일 하나로 대체할 수 있다.**           
              
 ```properties  
 server.port=80   
 ```    
 기존에는 `.properties` 파일을 많이 사용하지만   
-최근에는 표현의 한계로 **YAML 파일을 더 많이 사용합니다.**         
+최근에는 표현의 한계로 **YAML 파일을 더 많이 사용한다.**         
         
 ```yml
 server:
       port: 80
 ```   
-yml(yaml)의 경우 프로퍼티 설정값의 깊이에 따라 들여쓰기를 해서 **계층 구조로 훨씬 쉽게 파악할 수 있다.**         
-yaml을 설정하려면 `SnakeYAML 라이브러리`를 포함해야 하지만 `springboot-starter`에 기본적으로 내장되어있다.             
-즉, **`springboot-starter`를 사용하면 별도의 설정 없이 사용할 수 있다.**    
-   
+yml(yaml)의 경우 프로퍼티 설정값의 깊이에 따라 들여쓰기를 해서 **계층 구조로 훨씬 쉽게 파악할 수 있다.**           
+yaml을 설정하려면 `SnakeYAML 라이브러리`를 포함해야 하지만 **`springboot-starter`에 기본적으로 내장되어있다.**                
+즉, **`springboot-starter`를 사용하면 별도의 설정 없이 사용할 수 있다.**      
+      
 **properties vs yml 🤔**         
 * `application.properties` 와 `application.yml`이 동시에 존재하면 `.yml` 파일이 실행된다.   
-   
-## 프로파일에 따른 환경 구성 분리   
-실제 서비스는 **`테스트`, `로컬`, `개발`, `운영`의 설정을 나누는 경우가 많다.**           
-이러한 개발 환경을 나누기 위해 **`profile 설정` 및 `profile 별로 프로퍼티 파일`을 작성한다.**          
-
-   
-**YAML** 파일에서 프로퍼티 설정을 구분하는 방법은 간단합니다.   
-다음과 같이 ```---``` 을 기준으로 설정값을 나눕니다.   
-    
-**application.yml**
-```yml   
-server:
-  port: 80
----
-spring: 
-  profiles: local
-server:
-  port: 8080
----
-spring:
-  profiles: dev
-server:
-  port: 8081
----
-spring:
-  profiles: real
-server:
-  port: 8082
----
-```
-최상단에 ```server.port``` 프로퍼티값을 80으로 설정한 부분은 프로파일과는 상관없이 디폴트로 정의되는 영역입니다.       
-**또다른 방법으로 ```application-[profile].yml```을 이용하는 겁니다.**                    
-     
-```[profile]```에 원하는 프로파일 값으로 YAML 파일을 추가하면             
-애플리케이션 실행 시 ```application-[profile].yml```에서 지정한 프로파일값을 바탕으로 실행됩니다.          
-즉, **호출한 ```yml```이 우선순위가 되고 이외에 존재하는 프로퍼티들도 ```applcaiton.yml```순서에 따라 설정됩니다.**            
-   
-### 이번에는 프로파일값을 적용하여 애플리케이션을 실행하는 방법을 알아보겠습니다.   
-```local```, ```dev```, ```real```과 같이 각각의 프로파일값을 따로 지정하여 애플리케이션을 실행한다 가정합니다.   
-스프링 부트 프로젝트는 JAR 파일로 빌드하기에 서버에서 직접 간단한 명령으로 실행할 수 있습니다.    
-   
-아래 와 같이 실행하여 프로파일 값을 활성화할 수 있습니다.
-
-```
-$ java -jar -D spring.profiles.active=dev
-```
-```
-java -Dspring.profiles.active=dev -jar [jar파일명].jar
-java -jar [jar파일명].jar --spring.profiles.active=dev
-```
-출처: https://freestrokes.tistory.com/106 [FREESTROKES DEVLOG]     
       
-      
-인텔리제이는 스프링 부트 실행 플러그인을 따로 사용하기 때문에       
-```Edit Configurations``` 버튼을 눌러 ```Run/Debug configurations``` 창을 실행하고     
-스프링 부트 플러그인의 프로파일 값을 할당하면 됩니다.      
+# 프로퍼티 파일 바인딩   
+프로퍼티 파일을 바인딩하는 방법은 아래 2가지가 존재한다.   
 
-**얼티메이트와 커뮤니티는 Application 타입이 달라서 환경이 다르다**    
-커뮤니티를 기준으로 ```VM options:```에 ```-Dspring.profiles.active=dev```로 설정해주면된다.   
-   
-[사진]   
-    
+* `@Value` 
+* `@ConfigurationProperties`
 
-## 4.2. YAML 파일 매핑하기  
-YAML 파일을 사용하면 깊이에 따라 관계를 구분 짓기 때문에      
-```List```, ```Set```, ```Map``` 등 다양한 바인딩형 매핑이 훨씬 편합니다.     
-      
-YAML 파일에 있는 데이터를 가져와서 사용하는 방법은 다양합니다. (properties의 매핑 방법도 같습니다.)          
-유용하게 사용되는 ```@Value```와 ```@ConfigurationProperties``` 어노테이션을 비교해보겠습니다.      
 
-```
-어노테이션이란 클래스, 메소드, 필드 등 프로그램 요소에 정보를 제공하는 기법입니다.   
-타깃 요소를 제어/관리/명시하는 등의 다양한 기능을 할 수 있습니다.   
-```
-
-[사진]  
-
-각 기능은 다음과 같습니다.  
-   
-* **유연한 바인딩 :**   
+**유연한 바인딩**   
 프로퍼티값을 객체에 바인딩할 경우 필드를 낙타표기법(aBc)으로 선언하고        
-프로퍼티의 키는 다양한 형식(낙타, 케밥, 스네이크)으로 선언하여 바인딩할 수 있습니다.      
+프로퍼티의 키는 다양한 형식(낙타, 케밥, 스네이크)으로 선언하여 바인딩할 수 있다.      
       
-* **메타데이터 지원  :**     
+**메타데이터 지원**     
 프로퍼티의 키에 대한 정보를 메타데이터 파일로 제공합니다.                     
-키의 이름, 타입, 설명, 디폴트값 등 키 사용에 앞서 힌트가 되는 정보를 얻을 수 있습니다.                    
+키의 이름, 타입, 설명, 디폴트값 등 키 사용에 앞서 힌트가 되는 정보를 얻을 수 있다.                    
        
-* **SpEL(Spring Expression Language, 스프링 표현언어) 평가 :**          
-SpEL은 런타임에 객체 참조에 대해 질의하고 조작하는 기능을 지원하는 언어입니다.              
+**SpEL(Spring Expression Language, 스프링 표현언어) 평가**          
+SpEL은 런타임에 객체 참조에 대해 질의하고 조작하는 기능을 지원하는 언어다.              
 특히 메소드 호출 및 기본 문자열 템플릿 기능을 제공합니다.          
-```@Value```만 사용 가능합니다.              
-   
+`@Value`만 사용 가능하다.              
+    
 표만 봐서 감이 잡히지 않을 것이니 코드를 보면서 이해해보도록 하겠습니다.    
          
-## 4.3. ```@Value``` 살펴보기   
-**프로퍼티의 키를 사용하여 특정한 값을 호출할 수 있습니다.**      
+##  @Value   
+프로퍼티의 `key`를 사용하여 특정한 값을 호출할 수 있다.           
 키를 정확히 입력해야 하며 값이 없을 경우에 대해 예외 처리를 해주어야 합니다.    
     
 ```application.yml``` 파일에 아래와 같은 소스코드를 입력해줍니다.              
@@ -1162,3 +1091,69 @@ test {
 ● 기본 프로퍼티 소스 지원 (application.properties)
 ● 프로파일까지 고려한 계층형 프로퍼티 우선 순위 제공
 ```
+## 프로파일에 따른 환경 구성 분리   
+실제 서비스는 **`테스트`, `로컬`, `개발`, `운영`의 설정을 나누는 경우가 많다.**           
+이러한 개발 환경을 나누기 위해 **`profile 설정` 및 `profile 별로 프로퍼티 파일`을 작성한다.**          
+
+   
+**YAML** 파일에서 프로퍼티 설정을 구분하는 방법은 간단합니다.   
+다음과 같이 ```---``` 을 기준으로 설정값을 나눕니다.   
+    
+**application.yml**
+```yml   
+server:
+  port: 80
+---
+spring: 
+  profiles: local
+server:
+  port: 8080
+---
+spring:
+  profiles: dev
+server:
+  port: 8081
+---
+spring:
+  profiles: real
+server:
+  port: 8082
+---
+```
+최상단에 ```server.port``` 프로퍼티값을 80으로 설정한 부분은 프로파일과는 상관없이 디폴트로 정의되는 영역입니다.       
+**또다른 방법으로 ```application-[profile].yml```을 이용하는 겁니다.**                    
+     
+```[profile]```에 원하는 프로파일 값으로 YAML 파일을 추가하면             
+애플리케이션 실행 시 ```application-[profile].yml```에서 지정한 프로파일값을 바탕으로 실행됩니다.          
+즉, **호출한 ```yml```이 우선순위가 되고 이외에 존재하는 프로퍼티들도 ```applcaiton.yml```순서에 따라 설정됩니다.**            
+   
+### 이번에는 프로파일값을 적용하여 애플리케이션을 실행하는 방법을 알아보겠습니다.   
+```local```, ```dev```, ```real```과 같이 각각의 프로파일값을 따로 지정하여 애플리케이션을 실행한다 가정합니다.   
+스프링 부트 프로젝트는 JAR 파일로 빌드하기에 서버에서 직접 간단한 명령으로 실행할 수 있습니다.    
+   
+아래 와 같이 실행하여 프로파일 값을 활성화할 수 있습니다.
+
+```
+$ java -jar -D spring.profiles.active=dev
+```
+```
+java -Dspring.profiles.active=dev -jar [jar파일명].jar
+java -jar [jar파일명].jar --spring.profiles.active=dev
+```
+출처: https://freestrokes.tistory.com/106 [FREESTROKES DEVLOG]     
+      
+      
+인텔리제이는 스프링 부트 실행 플러그인을 따로 사용하기 때문에       
+```Edit Configurations``` 버튼을 눌러 ```Run/Debug configurations``` 창을 실행하고     
+스프링 부트 플러그인의 프로파일 값을 할당하면 됩니다.      
+
+**얼티메이트와 커뮤니티는 Application 타입이 달라서 환경이 다르다**    
+커뮤니티를 기준으로 ```VM options:```에 ```-Dspring.profiles.active=dev```로 설정해주면된다.   
+   
+[사진]   
+    
+YAML 파일을 사용하면 깊이에 따라 관계를 구분 짓기 때문에      
+```List```, ```Set```, ```Map``` 등 다양한 바인딩형 매핑이 훨씬 편합니다.     
+      
+YAML 파일에 있는 데이터를 가져와서 사용하는 방법은 다양합니다. (properties의 매핑 방법도 같습니다.)          
+
