--- a/01 IoC 컨테이너/06 프로퍼티.md
+++ b/01 IoC 컨테이너/06 프로퍼티.md
@@ -19,7 +19,7 @@ server:
       port: 80
 ```   
 `yml(yaml)`의 경우 프로퍼티 설정값의 깊이에 따라 들여쓰기를 해서 **계층 구조로 훨씬 쉽게 파악할 수 있다.**           
-yaml을 설정하려면 `SnakeYAML 라이브러리`를 포함해야 하지만 **`springboot-starter`에 기본적으로 내장되어있다.**                
+`yaml`을 설정하려면 `SnakeYAML 라이브러리`를 포함해야 하지만 **`springboot-starter`에 기본적으로 내장되어있다.**                
 즉, **`springboot-starter`를 사용하면 별도의 설정 없이 사용할 수 있다.**      
       
 **properties vs yml 🤔**         
